--- a/_posts/2022-03-03-中华简史_南北朝.md
+++ b/_posts/2022-03-03-中华简史_南北朝.md
@@ -5,176 +5,174 @@ date: 2022-12-26 09:52:00
 description: 五胡乱华，中国历史上的第一个大乱世。
 ---
 
-## 中华简史-南北朝卷
-### 概述
+## 概述
 ```
 ```
 
-### 宋
-### 高祖 武皇帝 刘裕 
-#### 永初元年 420
+## 宋
+## 高祖 武皇帝 刘裕 
+### 永初元年 420
 > 刘裕废晋恭帝自立，改国号为宋，仍都建康，东晋灭亡，南朝开始。
-### 刘义符 刘裕长子
-#### 景平元年(422年-424年)
+## 刘义符 刘裕长子
+### 景平元年(422年-424年)
 
-### 太祖 (初谥中宗) 文皇帝 刘义隆 刘裕三子
-#### 元嘉元年(424年- 453年)
-#### 元嘉十六年 北魏太武帝太延五年
+## 太祖 (初谥中宗) 文皇帝 刘义隆 刘裕三子
+### 元嘉元年(424年- 453年)
+### 元嘉十六年 北魏太武帝太延五年
 > 北魏拓跋焘灭北凉，统一中国北方。
-#### 元嘉二十二年  太平真君六年
+### 元嘉二十二年  太平真君六年
 > 卢水胡人盖吴在杏城（今陕西黄陵）领导起义，羌氐汉等族人民纷纷响应，反对北魏统治。
-#### 元嘉二十七年 太平真君十一年
+### 元嘉二十七年 太平真君十一年
 >  北魏十六万大军南侵，为宋击退。
 
-### 元皇帝 刘劭 刘义隆长子
-#### 太初元年(453年)
+## 元皇帝 刘劭 刘义隆长子
+### 太初元年(453年)
 
 
-### 世祖 孝武皇帝 刘骏 刘义隆三子
-#### 孝建元年(453年-456年)
-#### 大明元年(457年-464年)
+## 世祖 孝武皇帝 刘骏 刘义隆三子
+### 孝建元年(453年-456年)
+### 大明元年(457年-464年)
 
-### 宋前废帝 刘子业 刘骏长子
-#### 永光元年(464年)
-#### 景和元年(465年)
+## 宋前废帝 刘子业 刘骏长子
+### 永光元年(464年)
+### 景和元年(465年)
 
-### 太宗 明皇帝 刘彧 刘义隆十一子
-#### 泰始元年(465年-471年)
-#### 泰豫元年(472年)
+## 太宗 明皇帝 刘彧 刘义隆十一子
+### 泰始元年(465年-471年)
+### 泰豫元年(472年)
 
-### 苍梧王 宋后废帝 刘昱 刘彧长子
-#### 元徽元年(472年-477年)
+## 苍梧王 宋后废帝 刘昱 刘彧长子
+### 元徽元年(472年-477年)
 
 
-### 顺皇帝 刘准 刘彧三子
-#### 升明元年(477年-479年)
+## 顺皇帝 刘准 刘彧三子
+### 升明元年(477年-479年)
 
-### 齐
+## 齐
 
-### 太祖 高皇帝 萧道成
-#### 建元元年479年-482年
+## 太祖 高皇帝 萧道成
+### 建元元年479年-482年
 > 将军萧道成废宋顺帝刘淮自立，改国号为齐，史称南齐或萧齐。
-#### 建元七年 北魏孝文帝太和九年 齐武帝永明元年
+### 建元七年 北魏孝文帝太和九年 齐武帝永明元年
 > 北魏孝文帝改革，颁布均田令。
 > 唐寓之在富阳（今浙江富阳）领导农民起义。
-#### 建元八年 北魏太和十年
+### 建元八年 北魏太和十年
 > 北魏实行三长制。
-#### 建元十六年 北魏太和十八年
+### 建元十六年 北魏太和十八年
 > 孝文帝由平城迁都洛阳，继续改革。
-#### 建元十七年 北魏太和十九年
+### 建元十七年 北魏太和十九年
 > 孝文帝赐群臣汉族“冠服”，以易鲜卑衣服，在朝廷上禁用鲜卑语。
 
-### 世祖 武皇帝 萧赜 萧道成长子
-#### 永明元年483年-493年
+## 世祖 武皇帝 萧赜 萧道成长子
+### 永明元年483年-493年
 
-### 郁林王 萧昭业 萧长懋长子
-#### 隆昌元年494年
+## 郁林王 萧昭业 萧长懋长子
+### 隆昌元年494年
 
-### 海陵恭王 萧昭文 萧长懋次子
-#### 延兴元年494年
+## 海陵恭王 萧昭文 萧长懋次子
+### 延兴元年494年
 
-### 高宗 明皇帝 萧鸾 萧道成之侄 萧道生次子
-#### 建武元年494年-497年
-#### 永泰元年498年
+## 高宗 明皇帝 萧鸾 萧道成之侄 萧道生次子
+### 建武元年494年-497年
+### 永泰元年498年
 
-### 东昏侯 萧宝卷 萧鸾长子
-#### 永泰（永元元年）
+## 东昏侯 萧宝卷 萧鸾长子
+### 永泰（永元元年）
 
-### 和皇帝 萧宝融 萧鸾八子
-#### 中兴元年 501
+## 和皇帝 萧宝融 萧鸾八子
+### 中兴元年 501
 > 萧衍杀齐和帝（萧宝融）。次年，自立为帝（梁武帝），改国号为梁，史称萧梁。齐亡。
 
-### 梁
+## 梁
 
-### 高祖 武皇帝 萧衍
-#### 天监元年502年-519年
-#### 普通元年520年-526年
-#### 普通四年
+## 高祖 武皇帝 萧衍
+### 天监元年502年-519年
+### 普通元年520年-526年
+### 普通四年
 魏孝明帝正光四年，北魏“六镇起义”
-#### 普通五年 北魏正光五年
+### 普通五年 北魏正光五年
 > 沃野镇民匈奴人破六韩跋陵领导起义，杀镇将。次年失败。
 > 关陇地区各族人民大起义，分别由敕勒人胡琛和羌人莫折大提领导。
-#### 普通六年 北魏正光六年
+### 普通六年 北魏正光六年
 > 孝昌元年，柔玄镇兵杜洛周在上谷领导兵民起义。
-#### 普通七年 北魏孝昌二年
+### 普通七年 北魏孝昌二年
 >  怀朔镇兵鲜于修礼在定州左人城（今河北唐县）领导起义。
 
-#### 大通元年527年-528年
-#### 大通二年 武泰元年，建义元年，永安元年
+### 大通元年527年-528年
+### 大通二年 武泰元年，建义元年，永安元年
 > 邢杲在北海（山东潍坊市西南）领导河北流民起义。北魏胡太后毒死孝明帝，立元钊为帝，尔朱荣率兵入洛阳，溺杀胡太后和少帝元钊，杀王公卿士一千余人，史称“河阴之变”
 
-#### 中大通元年529年-534年
-#### 中大通六年
+### 中大通元年529年-534年
+### 中大通六年
 > 东魏孝静帝天平元年，孝武帝逃亡关中，投靠宇文泰。北魏分裂，高欢立元善见为帝（孝静帝），迁都于邺（今河南安阳一带），是为东魏。宇文泰杀孝武帝，立元宝炬为帝（文帝），都长安，是为西魏。
 
-#### 大同元年535年-545年
-#### 中大同元年546年
-#### 太清元年547年-549年
-#### 太清二年
+### 大同元年535年-545年
+### 中大同元年546年
+### 太清元年547年-549年
+### 太清二年
 > “侯景之乱”，次年侯景攻破建康，梁武帝饿死。552年，侯景失败被杀。
 
 
-### 萧正德 萧衍之侄
-#### 正平元年548年-549年
+## 萧正德 萧衍之侄
+### 正平元年548年-549年
 
-### 太宗 (初谥高宗) 简文皇帝  萧纲 萧衍三子
-#### 大宝元年550年-551年 东魏孝敬帝武定八年
+## 太宗 (初谥高宗) 简文皇帝  萧纲 萧衍三子
+### 大宝元年550年-551年 东魏孝敬帝武定八年
 > 高欢死，子高洋废东魏孝敬帝自立，改国号为齐，史称北齐，年号天保。
 
-### 兴文皇帝 萧栋 萧欢之子
-#### 天正元年551年
+## 兴文皇帝 萧栋 萧欢之子
+### 天正元年551年
 
-### 萧纪 萧衍八子
-#### 天正元年552年-553年
+## 萧纪 萧衍八子
+### 天正元年552年-553年
 
-### 世祖 孝元皇帝 萧绎 萧衍七子
-#### 承圣元年552年-555年
+## 世祖 孝元皇帝 萧绎 萧衍七子
+### 承圣元年552年-555年
 
-### 肃宗 (萧庄追尊) 闵皇帝 萧渊明 萧衍之侄
-#### 天成元年555年
+## 肃宗 (萧庄追尊) 闵皇帝 萧渊明 萧衍之侄
+### 天成元年555年
 
-### 穆宗 (萧庄追尊) 敬皇帝(陈霸先追尊) 萧方智 萧绎九子 
-#### 绍泰元年555年-556年
-#### 太平元年556年-557年
-#### 太平元年
+## 穆宗 (萧庄追尊) 敬皇帝(陈霸先追尊) 萧方智 萧绎九子 
+### 绍泰元年555年-556年
+### 太平元年556年-557年
+### 太平元年
 > 梁敬帝绍泰二年，宇文泰死。次年，子宇文觉废西魏恭帝自立，改国号为周。史称北周，亦称宇文周。
-#### 太平二年
+### 太平二年
 > 梁敬帝太平二年，梁将军陈霸先废梁敬帝自立，改国号为陈，年定永号。
-#### 太平九年
+### 太平九年
 > 北齐武成帝河清三年，北齐实行均田制
-#### 太平十二年
+### 太平十二年
 > 北周武帝建德六年，北齐幼主承光元年，北周灭北齐，统一北方。
 
-### 陈
+## 陈
 
-### 高祖 武皇帝 陈霸先
-#### 永定
+## 高祖 武皇帝 陈霸先
+### 永定
 
-### 世祖 文皇帝 陈蒨 陈霸先之侄
-#### 天嘉560年－566年
-#### 天康556年
+## 世祖 文皇帝 陈蒨 陈霸先之侄
+### 天嘉560年－566年
+### 天康556年
 
-### 临海王 陈伯宗 陈蒨嫡长子
-#### 光大567年－568年
+## 临海王 陈伯宗 陈蒨嫡长子
+### 光大567年－568年
 
-### 高宗 孝宣皇帝 陈顼 陈霸先之侄 陈蒨之弟
-#### 太建元年569年－582年
-#### 太建十三年 北周静帝大定元年，隋文帝开皇元年，
+## 高宗 孝宣皇帝 陈顼 陈霸先之侄 陈蒨之弟
+### 太建元年569年－582年
+### 太建十三年 北周静帝大定元年，隋文帝开皇元年，
 > 北周杨坚废周静帝自立，改国号为隋，仍都长安，北周亡。
 
-### 长城炀公 陈叔宝 陈顼嫡长子
-#### 至德583年-586年
-#### 至德三年 隋文帝开皇五年
+## 长城炀公 陈叔宝 陈顼嫡长子
+### 至德583年-586年
+### 至德三年 隋文帝开皇五年
 > 行“大索貌阅和输籍法”
-#### 祯明587年-589年
+### 祯明587年-589年
 
-#### 开皇九年
+### 开皇九年
 > 隋灭陈统一全国。
 
 >  部分资料来自网络，如侵犯您的权益，请联系我删除！
 
-
-南北朝·宋纪　附北魏
+```
 
 
 高祖武帝
@@ -2588,5 +2586,4 @@ description: 五胡乱华，中国历史上的第一个大乱世。
 纲　冬以裴矩为黄门侍郎，经略西域。
 
 目　西域诸胡，多至张掖交市，帝使吏部侍郎裴矩掌之。矩知帝好远略，访诸商胡，以其国山川、风俗，撰西域图记三卷，入朝奏之。且云：“今羌、胡之国，并因商人密送诚款，引领翘首，愿为臣妾。若服而抚之，务存安辑，混一戎、夏，其在兹乎！”帝大悦。矩因盛言“胡中多诸珍宝”。帝于是慨然将通西域。以矩为黄门侍郎，复使至张掖，引致诸胡，啖之以利，劝令入朝。自是，西域诸胡往来相继，所经郡县，糜费以万万计，卒令中国疲弊，以至于亡，矩唱之也。
-
-
+```
