--- a/_posts/2022-03-03-中华简史_史前.md
+++ b/_posts/2022-03-03-中华简史_史前.md
@@ -5,42 +5,40 @@ date: 2022-12-26 09:52:00
 description: 史前时期多以传说为主，但不可不信。
 ---
 
-## 中华简史-史前卷
-
-### 概述
+## 概述
 ```
 人或言三皇五帝乃神话中人物，不存在，而予以为三皇五帝乃真人，后世传诵不断夸大而神话。这些上古首领的传承顺序家族关系也不一定正确。
 原始社会时期，部落首领应当是能者当之，部落方可发展壮大，应对外敌入侵。
 上古领袖动辄在位五十年，上百年的，有些人是因为流传过程中父子或者几代领袖被视为一人，所以一些上古领袖可以视为数代领袖。
 鉴于以上观点，禅让制理应存在，但是领袖之间也应存在暴力夺权之实，儒家对次过渡美化，我们应当谨慎对待尧舜禹的禅让。
 ```
-### 三皇 
+## 三皇 
 ```
 三皇时代人类由对天地的恐惧和信仰，逐步转换到英雄人物的信仰，这些英雄人物领导人们进行生产以及与自然的斗争，人类逐渐适应了各种各样的环境。
 ```
-### 盘古氏
+## 盘古氏
 盘古氏盖上古第一人，或为中华氏族已知之始祖。
 
-### 天皇氏，
+## 天皇氏，
 天皇氏继盘古氏以治。澹泊无为而俗自化。始制干支之名，以定岁之所在，十干曰阏逢、旃蒙、柔兆、强圉、著雍、屠维、上章、重光、玄黓、昭阳。十二支曰困敦、赤奋若、摄提格、单阏、执徐、大荒落、敦牂、协洽、涒滩、作噩、阉茂、大渊献。
 
-### 地皇氏，
+## 地皇氏，
 地皇氏继天皇氏以治。爰定三辰，是分昼夜，以三十日为一月。兄弟各一万八千岁。人皇氏，继地皇氏以治。相厥山川，分为九区，人居一方，故又曰居方氏。当是时也，万物群生，淳风沕穆，主不虚王，臣不虚贵，政教君臣所自起，饮食男女所自始。
 
-### 人皇氏，
+## 人皇氏，
 人皇氏具体不详，不过可以肯定，三皇都是部落领袖。
 德王，都陈，太昊之母居于华胥之渚，生帝于成纪，风姓。太昊始作网罟，以佃以渔，以赡民用，故曰伏羲氏。养牺牲，以充庖厨，故又曰庖牺氏。
 太昊德合上下，天应以鸟兽文章，地应以龙马负图，于是仰观象于天，俯观法于地，中观万物之宜，始画八卦。卦有三爻，因而重之为卦六十有四，以通神明之德。作书契，以代结绳之政。书制有六：一曰象形；二曰假借；三曰指事；四曰会意；五曰转注；六曰谐声。使天下义理必归文字，天下文字必归六书
 
-### 有巢氏构木为巢。
+## 有巢氏构木为巢。
 有巢氏作，构木为巢，教民居之，以避其害。未知稼穑，食草木之实。未有火化，饮禽兽之血而茹其毛。先取其皮蔽前，后取而蔽后。号曰有巢氏之民。
 燧人氏。燧人氏作，观星辰而察五行，知空有火，丽木则明，于是钻木取火，教民以烹饪，而民利之，故号燧人氏。以为燧者，火之所生也，乃别五木以改火，顺四时而遂天之意，由是火之功用洽矣。时未有文字，燧人氏始作结绳之政。
 
-### 五帝，始有五行交替
+## 五帝，始有五行交替
 ```
 五帝时代部族逐渐壮大，人们也不过是从自然中间区获取生产资料，而是通过对其他部族进行战争和掠夺。这时候部族领袖更进一步神话了，并且通过战争掠夺促进了不同部落之间的融合和生产力进一步进步。
 ```
-### 太昊
+## 太昊
 太昊伏羲氏，以木德王，都陈，太昊之母居于华胥之渚，生帝于成纪，风姓。太昊始作网罟，以佃以渔，以赡民用，故曰伏羲氏。养牺牲，以充庖厨，故又曰庖牺氏。
 太昊德合上下，天应以鸟兽文章，地应以龙马负图，于是仰观象于天，俯观法于地，中观万物之宜，始画八卦。卦有三爻，因而重之为卦六十有四，以通神明之德。作书契，以代结绳之政。书制有六：一曰象形；二曰假借；三曰指事；四曰会意；五曰转注；六曰谐声。使天下义理必归文字，天下文字必归六书。
 作甲历，定四时，起于甲寅，支、干相配为十二辰，六甲而天道周矣。岁以是纪而年不乱，月以是纪而时不易，昼夜以是纪而人知度，东西南北以是纪而方不惑。
@@ -49,14 +47,14 @@ description: 史前时期多以传说为主，但不可不信。
 造琴瑟，太昊作荒乐，歌扶徕，咏网罟，以镇天下之人，命曰立基。斫桐为琴，绳丝为弦。弦二十有七，命之曰离徽，以通神明之贶，以合天人之和。桑为三十六弦之瑟，以修身理性，反其天真，而乐音自是兴焉。
 帝崩，葬于陈，神农氏继世践位。
 
-### 炎帝
+## 炎帝
 炎帝神农氏，以火德王。少典氏之君娶于有氏之女曰安登，生二子焉，长曰石年，育于姜水，故以姜为姓。以火德代伏羲氏治天下，故曰炎帝。
 都陈。初蓺五谷。尝百草，制医药。古者，民茹草木之实，食禽兽之肉，未知耕稼，炎帝因天时，相地宜，斫木为耜，揉木为耒，始教民蓺五谷，而农事兴焉。民有疾病，未知药石，炎帝始味草木之滋，察其寒、温、平、热之性，辨其君、臣、佐、使之义，尝一日而遇七十毒，神而化之，遂作方书以疗民疾，而医道自此始矣。复察水泉甘、苦，令人知所避就。由是斯民居安食力，而无夭札之患，天下宜之，故号曰神农氏。
 始为日中之市。炎帝之世，其俗朴重端悫，不忿争而财足，始列廛于国，日中为市，致天下之民，聚天下之货，交易而退，各得其所。
 以火纪官。因火德王，故以火纪官，为火帝。春官为大火，夏官为鹑火，秋官为西火，冬官为北火，中官为中火。
 或传炎帝传八世，至榆罔而亡，黄帝继世而立。
 
-### 黄帝
+## 黄帝
 黄帝有熊氏，以土德王。少典国君之妃曰附宝者生帝于轩辕之丘，因名轩辕，姓公孙。轩辕生而神灵，弱而能言，幼而徇齐，长而敦敏，成而聪明。国于有熊，故号有熊氏。长于姬水，故又以姬为姓。
 及炎帝战于阪泉,神农氏衰，诸侯相侵伐，炎帝榆罔弗能征。于是轩辕习用干戈，以征不享，诸侯咸来宾从。榆罔欲侵陵诸侯，诸侯益叛之。轩辕修德振兵，教熊、罴、貔、貅、、虎，以与榆罔战于阪泉之野。三战，然后得其志。
 诛蚩尤于涿鹿,蚩尤姜姓，炎帝之裔也。好兵喜乱，作刀戟大弩以暴虐天下。轩辕乃征师诸侯，与蚩尤战于涿鹿之野。蚩尤能作大雾，军士昏迷。轩辕为指南车，以示四方，遂擒蚩尤戮之。
@@ -77,13 +75,13 @@ description: 史前时期多以传说为主，但不可不信。
 画野分州，经土设井,帝画野分州，得百里之国万区。命匠营国邑，置左右太监监于万国，万国以和。遂经土设井以塞争端，立步制亩以防不足。使八家为井，井开四道，而分八宅。井一为邻，邻三为朋，朋三为里，里五为邑，邑十为都，都十为师，师十为州。分之于井而计于州，则地著而数详。
 帝采首山之铜，铸三鼎于荆山之阳。鼎成，崩焉,葬崩于荆山之阳,葬桥山。子玄嚣践位。
 
-### 少昊
+## 少昊
 少昊金天氏，以金德王。名挚，姓己，黄帝之子玄嚣也。母曰嫘祖。黄帝之世降居江水，邑于穷桑，故号穷桑氏。国于青阳，因号青阳氏。以金德王天下，遂号金天氏。能修太昊之法，故曰少昊。
 徙都于曲阜。凤鸟来集，以鸟纪官。少昊之立也，凤鸟适至，因以鸟纪官。凤鸟氏，历正也；玄鸟氏，司分者也；伯赵氏，司至者也；青鸟氏，司启者也；丹鸟氏，司闭者也；祝鸠氏，司徒也；雎鸠氏，司马也；鸤鸠氏，司空也；爽鸠氏，司寇也；鹘鸠氏，司事也。五鸠，鸠民者也。五雉，为九工正，利器用，正度量，夷民者也。九扈，为九农正，扈民无淫者也。
 时诸福之物毕至，作大渊之乐以谐人神，和上下，是曰九渊。
 帝崩，葬于曲阜，高阳氏践位。或曰帝葬于云阳，故又曰云阳氏。
 
-### 帝颛顼
+## 帝颛顼
 颛顼高阳氏，颛顼高阳氏以水德王，都于帝丘，色尚赤。帝姬姓，祖黄帝，父昌意，母蜀山氏女曰昌仆，是为女枢，生帝于若水。
 年十岁佐少昊，年二十即帝位，以水德绍金天氏政。初国高阳，故号高阳氏。
 命五官，以少昊之四子重、该、修、熙实能金、木及水，乃俾重为木正，曰句芒；该为金正，曰蓐收；修、熙相代为水正，曰玄冥；又以炎帝之子句龙为土正；而帝之孙黎为火正，曰祝融：是为五官。
@@ -91,15 +89,15 @@ description: 史前时期多以传说为主，但不可不信。
 帝命飞龙氏会八风之音，为圭水之曲。以召气而生物，浮金效珍，于是铸为之钟，作五基、六英之乐以调阴阳，享上帝，朝群后，名曰承云。
 帝崩，葬于濮阳，高辛氏践位。
 
-### 帝喾
+## 帝喾
 帝喾高辛氏，都于亳，以木德王，色尚黑。帝姬姓，名夋。祖曰少昊，父曰极。生而神灵。年十五，佐颛帝，受封于辛。年三十，以木德代高阳氏为天子。以其肇基于辛，故号高辛氏。
 帝命咸黑典乐，为声歌，名曰六英。帝元妃有邰氏女曰姜嫄，与帝禋祀上帝而生弃，为舜后稷，其后为周。次妃有娀氏女曰简狄，祈于高禖，有飞燕之祥而生契，为舜司徒，其后为商。三妃陈锋氏女曰庆都，有赤龙之祥而生尧，是为陶唐氏。四妃娵訾氏女曰常仪，生挚。帝崩，子挚嗣立。
 帝崩，葬于顿丘，子挚践位。
 
-### 帝挚
+## 帝挚
 挚在位九年，荒淫无度，不修善政，诸侯于是废之，而推尊尧为天子。
 
-### 帝尧
+## 帝尧
 甲辰，唐帝尧元载，帝自唐侯践天子位于平阳，以火德王。
 帝姓伊耆，名放勋，帝喾高辛氏之子，母高辛氏妃陈锋氏女，帝挚之弟，黄帝轩辕氏之曾孙也。，育于母家伊侯之国，后徙耆，故曰伊耆氏。年十有三佐帝挚封植，受封于陶；年十有五复封于唐，为唐侯，故又号陶唐氏。挚在位九年，天人厌弃，诸侯尊帝为天子。年十有六，践天子之位于平阳。
 乙巳，二载，命羲、和置闰法，定四时成岁。
@@ -124,7 +122,7 @@ description: 史前时期多以传说为主，但不可不信。
 庚申，七十有七载，作大章乐。
 辛酉，七十有八载，舜巡狩方岳。
 
-### 帝舜
+## 帝舜
 帝舜有虞氏，姚姓，名重华，瞽瞍之子。虞帝舜元载，春正月元日，帝格于文祖，践天子位于蒲阪，以土德王。
 帝舜少以孝名，舜母死，瞽瞍更娶妻而生象，象傲。瞽瞍爱妻后子，常欲杀舜，舜避逃；及有小过，则受罪。顺适不失子道，孝而慈于弟，日以笃谨。年二十，以孝闻。耕历山，历山之人皆让畔。渔雷泽，雷泽之人皆让居。陶河滨，河滨之器不苦窳。作什器于寿丘，就时于负夏。所居一年成聚，二年成邑，三年成都。
 纲　在璇玑玉衡，以齐七政。帝尧登庸而禅以帝位，摄政二十有八载。
