--- a/_posts/2022-03-03-中华简史_后汉.md
+++ b/_posts/2022-03-03-中华简史_后汉.md
@@ -5,8 +5,7 @@ date: 2022-12-26 09:52:00
 description: 王莽篡汉，光武中兴。
 ---
 
-## 中华简史-后汉卷
-### 概述
+## 概述
 ```
 东汉（25年—220年）是中国历史上继秦朝、西汉、新朝之后的大一统王朝，与西汉合称汉朝，传八世共十四帝，历经一百九十五年。因西汉又称为前汉，故东汉又称后汉。
 
@@ -19,182 +18,181 @@ description: 王莽篡汉，光武中兴。
 东汉在文化、科技、军事等方面亦有显著成就，文化上郑玄将经学推向高峰并开创郑学；科技上蔡伦改进造纸术，张衡发明地动仪和浑天仪；军事上迫使北匈奴西迁，同时佛教也在此期间传入中国，道教也于东汉时期形成。东汉时期豪强地主势力扩张并形成门阀士族，匈奴、羌族、氐族等民族内迁，北匈奴西迁后鲜卑人占据漠北，对后世产生深远影响。
 ```
 
-### 世祖 光武皇帝 刘秀
-#### 建武元年 25年
+## 世祖 光武皇帝 刘秀
+### 建武元年 25年
 > 六月，刘秀称皇帝于鄗，建元建武，是为汉光武帝刘秀
 > 十月，定都洛阳
-#### 建武六年 30年
+### 建武六年 30年
 > 十二月，减田租，三十税一
-#### 建武十五年 39年
+### 建武十五年 39年
 > 诏州郡检核田数、户口、年纪
-#### 建武十六年 40年
+### 建武十六年 40年
 > 交趾麊泠县雒将女征侧与妹征贰起事，称王
-#### 建武十八年 42年
+### 建武十八年 42年
 > 罢州牧，置刺史
-#### 建武十九年 43年
+### 建武十九年 43年
 > 伏波将军马援大破征侧、征贰，岭南悉定
-#### 建武二十四年 48年
+### 建武二十四年 48年
 > 十月，匈奴薁鞬日逐王自立为单于，是为南单于，率漠南八部归降于汉。自是匈奴分为南北
-#### 建武二十五年 49年
+### 建武二十五年 49年
 > 南匈奴单于遣使称藩
 > 乌桓大人郝旦等内属，置乌桓校尉于上谷宁城以监护之
-#### 建武二十七年 51年
+### 建武二十七年 51年
 > 诏司空、司徒并去“大”，改大司马为太尉
-#### 建武中元元年 56年—57年
+### 建武中元元年 56年—57年
 > 宣布图谶于天下，谶纬之学成为官方的统治思想
-#### 建武中元二年
+### 建武中元二年
 > 正月，倭奴国来贡，汉赐以“汉倭奴国王”之印
 > 二月，光武帝死，皇太子庄嗣位，是为汉明帝刘庄
 > 是岁，全国有户四百二十七万零六百三十四，口两千一百万七千八百二十
 
-### 显宗 孝明皇帝 刘庄
-#### 永平元年 58年—75年
-#### 永平永平八年 65年 
+## 显宗 孝明皇帝 刘庄
+### 永平元年 58年—75年
+### 永平永平八年 65年 
 > 楚王刘英奉缣帛赎罪，诏还之，以助供养伊蒲塞，是为中国人崇信佛教见于记录之始
-#### 永平十六年 73年
+### 永平十六年 73年
 > 窦固击匈奴，至天山，取伊吾庐地，置宜禾都尉，因遣假司马班超使西域，西域与汉绝六十五年，至是复通
-#### 永平十八年 75年
+### 永平十八年 75年
 > 八月，明帝死，皇太子炟嗣位，是为汉章帝刘炟
-### 肃宗 孝章皇帝 刘炟
-#### 建初元年 76年
-#### 建初建初四年 79年
+## 肃宗 孝章皇帝 刘炟
+### 建初元年 76年
+### 建初建初四年 79年
 > 十一月，白虎观会议。诏诸儒会于白虎观，讲论五经异同
 
-#### 元和元年 84年—87年
-#### 章和元年 87年—88年
-#### 章和二年 88年
+### 元和元年 84年—87年
+### 章和元年 87年—88年
+### 章和二年 88年
 > 正月，章帝死，皇太子肇嗣位，是为汉和帝刘肇
 
-### 穆宗 (后除) 孝和皇帝 刘肇
-#### 永元元年 89年
+## 穆宗 (后除) 孝和皇帝 刘肇
+### 永元元年 89年
 > 春，邓训大破诸羌，略定陇右
 > 六月，窦宪大破北匈奴于稽落山，北匈奴单于遣弟奉献
-#### 永元三年 91年
+### 永元三年 91年
 > 窦宪大破北单于于金微山，北单于遁，其弟於除鞬自立为单于，款塞请降
 > 十二月，复置西域都护
-#### 永元四年 92年
+### 永元四年 92年
 > 和帝与宦官郑众定议，诛大将军窦宪，众以功封侯，是为宦官用权之始
-#### 永元十七年 105年
+### 永元十七年 105年
 > 和帝死，少子隆以皇太子嗣位，是为汉殇帝刘隆，皇太后邓氏临朝称制
-#### 元兴元年 105年
+### 元兴元年 105年
 
-### 孝殇皇帝 刘隆
-#### 延平元年106年
+## 孝殇皇帝 刘隆
+### 延平元年106年
 > 八月，殇帝死。迎清河王子祜嗣位，是为汉安帝刘祜
 
-### 恭宗 (后除) 孝安皇帝 刘祜
-#### 永初元年 107年—113年
-#### 元初元年 114年—119年
-#### 永宁元年 120年—121年
-#### 建光元年 121年—122年
-#### 延光元年 122年—125年
-#### 延光延光二年 123年
+## 恭宗 (后除) 孝安皇帝 刘祜
+### 永初元年 107年—113年
+### 元初元年 114年—119年
+### 永宁元年 120年—121年
+### 建光元年 121年—122年
+### 延光元年 122年—125年
+### 延光延光二年 123年
 > 以班勇为西域长史，率兵出屯柳中
-#### 延光四年 125年
+### 延光四年 125年
 > 三月，安帝死，以北乡侯刘懿嗣位。十月，懿死。
 > 十一月，中常侍孙程等拥立废太子济阴王保，是为汉顺帝刘保
 
-### 敬宗(后除) 孝顺皇帝 刘保
-#### 永建元年 126年—132年
-#### 阳嘉元年 132年—135年
-#### 永和元年 136年—141年
-#### 汉安元年 142年
-#### 汉安三年 144年
+## 敬宗(后除) 孝顺皇帝 刘保
+### 永建元年 126年—132年
+### 阳嘉元年 132年—135年
+### 永和元年 136年—141年
+### 汉安元年 142年
+### 汉安三年 144年
 > 八月，顺帝死。皇太子炳嗣位，是为汉冲帝刘炳，皇太后梁氏临朝称制
-#### 建康元年 144年
+### 建康元年 144年
 
-### 孝冲皇帝 刘炳
-#### 永嘉元年 145年
+## 孝冲皇帝 刘炳
+### 永嘉元年 145年
 > 正月，冲帝死，大将军梁冀立勃海王鸿子缵嗣位，是为汉质帝刘缵
 
-### 孝质皇帝 刘缵
-#### 本初元年 146年
+## 孝质皇帝 刘缵
+### 本初元年 146年
 > 六月，梁冀鸩杀质帝，迎蠡吾侯刘志嗣位，是为汉桓帝刘志，皇太后梁氏仍临朝
 
-### 孝桓皇帝 刘志
-#### 建和元年 147年—149年
-#### 和平元年 150年
-#### 元嘉元年 151年—152年
-#### 永兴元年 153年—154年
-#### 永寿元年 155年—158年
-#### 延熹元年 158年—167年
-#### 延熹延熹二年 159年
+## 孝桓皇帝 刘志
+### 建和元年 147年—149年
+### 和平元年 150年
+### 元嘉元年 151年—152年
+### 永兴元年 153年—154年
+### 永寿元年 155年—158年
+### 延熹元年 158年—167年
+### 延熹延熹二年 159年
 > 八月，收梁冀大将军印绶，冀及其妻皆自杀
-#### 延熹八年 165年
+### 延熹八年 165年
 > 初令郡国有田者，按亩敛税，每亩十钱
-#### 延熹九年 166年
+### 延熹九年 166年
 > 党锢事件发生。司隶校尉李膺等两百余人被称为党人，下狱考治，太尉陈蕃被罢免
-#### 延熹十年 167年
+### 延熹十年 167年
 > 十二月，桓帝死，皇太后窦氏迎解渎亭侯刘宏嗣位，是为汉灵帝刘宏，皇太后临朝称制
-#### 永康元年 167年
+### 永康元年 167年
 
-### 孝灵皇帝 刘宏
-#### 建宁元年 168年
-#### 建宁建宁二年 169年
+## 孝灵皇帝 刘宏
+### 建宁元年 168年
+### 建宁建宁二年 169年
 > 诏将党人赦归乡里，禁锢终身，不得做官
 > 十月，党事狱起，党人妻、子徙边，附从者锢及五属
 
-#### 熹平元年 172年—178年
-#### 熹平熹平四年 175年
+### 熹平元年 172年—178年
+### 熹平熹平四年 175年
 > 三月，诏诸儒正五经文字，刻石立于太学门外，是为熹平石经
-#### 熹平五年 176年
+### 熹平五年 176年
 > 诏州郡更考党人，门生、故吏、父子兄弟在位者皆免官
-#### 光和元年 178年—184年
-#### 中平元年 184年—189年
+### 光和元年 178年—184年
+### 中平元年 184年—189年
 > 二月，张角率众起义，因义军皆戴黄巾，故称黄巾起义
 > 大赦党人
-#### 中平189年
+### 中平189年
 > 四月， 灵帝死。皇子辩嗣位，是为汉少帝刘辩
 > 八月，宦官杀大将军何进，司隶校尉袁绍尽诛宦官。董卓带兵入洛阳，尽揽朝政
 > 九月，董卓废少帝，立陈留王刘协，是为汉献帝刘协
-### 弘农怀王 刘辩
-#### 光熹元年 189年
-#### 昭宁元年 189年
+## 弘农怀王 刘辩
+### 光熹元年 189年
+### 昭宁元年 189年
 
-### 孝献皇帝 刘协
-#### 永汉元年 189年—189年
-#### 中平元年 189年—189年
-#### 初平元年 190年—193年
+## 孝献皇帝 刘协
+### 永汉元年 189年—189年
+### 中平元年 189年—189年
+### 初平元年 190年—193年
 > 正月，关东州郡起兵，推袁绍为盟主，讨董卓
 > 二月，董卓胁献帝迁都长安
-#### 初平三年 192年
+### 初平三年 192年
 > 四月，司徒王允等杀董卓
 > 曹操在济北诱降黄巾军三十万，号青州兵
-#### 兴平元年 194年—195年
-#### 建安元年 196年
+### 兴平元年 194年—195年
+### 建安元年 196年
 > 曹操迎献帝于许，开始许下屯田
-#### 建安二年 197年
+### 建安二年 197年
 > 袁术称帝于寿春
-#### 建安四年 199年
+### 建安四年 199年
 > 袁绍消灭幽州公孙瓒，占有幽、冀、青、并四州
-#### 建安五年 200年
+### 建安五年 200年
 > 十月，曹操破袁绍于官渡，是为官渡之战
-#### 建安九年 204年
+### 建安九年 204年
 > 曹操平定河北后，颁布户调令，户征绢两匹、绵两斤，称户调
-#### 建安十二年 207年
+### 建安十二年 207年
 > 曹操出卢龙塞，远征乌桓，乌桓败绩
-#### 建安十三年 208年
+### 建安十三年 208年
 > 六月，罢三公官，置丞相、御史大夫。曹操进位丞相，挥军南下
 > 孙权、刘备联军破曹军于赤壁，是为赤壁之战
-#### 建安十六年 211年
+### 建安十六年 211年
 > 曹操自将兵进入关中，驱逐韩遂、马超
 > 刘璋遣军议校尉法正至荆州迎刘备，刘备入蜀
-#### 建安二十年 215年
+### 建安二十年 215年
 > 曹操征降汉中张鲁，统一北方
-#### 建安二十一年 216年
+### 建安二十一年 216年
 > 曹操进号魏王
-#### 建安二十四年 219年
+### 建安二十四年 219年
 > 刘备从曹操手中夺得汉中，自立为汉中王
 > 关羽攻樊城， 大破曹军
 > 孙权袭杀关羽，占荆州
 > 张仲景卒，著有《伤寒杂病论》，被奉为“医圣”
-#### 延康元年 220年
+### 延康元年 220年
 
 >  部分资料来自网络，如侵犯您的权益，请联系我删除！
 
 
-东汉纪
-
+```
 
 世祖光武皇帝
 
@@ -5934,4 +5932,4 @@ description: 王莽篡汉，光武中兴。
 
 右东汉十二帝，共一百九十六年。
 
-
+```
