--- a/_posts/2022-03-03-中华简史_商.md
+++ b/_posts/2022-03-03-中华简史_商.md
@@ -5,9 +5,7 @@ date: 2022-12-26 09:52:00
 description: 商汤灭夏，创立商王朝。
 ---
 
-## 中华简史-商朝卷
-
-### 概述
+## 概述
 ```
 　　约公元前1600年，汤的军队打败了夏桀的军队，至此夏王朝灭亡，汤建立了商王朝。汤，又名成汤或成唐，甲骨文称他为大乙。商族经过长期的发展，力量逐渐壮大起来，至汤时，迁居于毫(今河南濮阳)，进行灭夏的准备。成汤于前1600年左右联合各方国和部落征伐夏桀。出发前，汤发表誓师词，即今天保存在《尚书》里的《汤誓》。夏桀面对汤的进攻，毫无准备，不战而逃，在南巢被囚而死，夏灭。商汤在三千诸侯的拥戴下登上天子之位。宣告商王朝的成立。商汤汲取了夏桀的教训，以身作则，勤政爱民，受到各地诸侯的欢迎。商朝的建立，大大促进了生产力的发展，使古代文明的进步获得转机，使中国成为文明古国之一。
 
@@ -18,7 +16,7 @@ description: 商汤灭夏，创立商王朝。
 　　武王伐纣的故事记载了商朝灭亡的过程。渭河流域周部落的首领武王姬发，联合各部落讨伐殷商，而当时统治殷商的商纣王也是一个像夏桀一样的暴君，早已引起人们的忌恨。为了抗击武王，纣王将大批奴隶武装起来，而这些奴隶却在前线倒戈，实际上是一次奴隶起义，纣王在惊恐中自焚而死。商王朝灭亡了，被周朝所取代。
 ```
 
-### 先公
+## 先公
 ```
 先公
 契（约前2096年－前?年注释1）：虞舜三十三年－?
@@ -38,7 +36,7 @@ description: 商汤灭夏，创立商王朝。
 ```
 
 
-### 商汤 (履） 子姓
+## 商汤 (履） 子姓
 ```
 商汤，即成汤，子姓，名履，又名天乙（殷墟甲骨文称成、唐、大乙，宗周甲骨与西周金文称成唐），河南商丘人。汤是契的第十四代孙，主癸之子，商朝开国君主。商汤原是夏朝方国商国的君主，在伊尹、仲虺等人的辅助下陆续灭掉邻近的葛国（今河南商丘宁陵）以及夏朝的方国韦（今河南滑县，即后来大彭）、顾（在今河南范县）、昆
 ```
@@ -47,50 +45,50 @@ description: 商汤灭夏，创立商王朝。
 
 ```
 
-### 大丁又太丁 名托 未即位，追尊为王
+## 大丁又太丁 名托 未即位，追尊为王
 
-### 外丙（胜）
+## 外丙（胜）
 ```
 外丙是商朝第二任君主，名胜，成汤之子，由于成汤的长子太丁早逝，因此成汤去世后就由他继位，伊尹摄政。
 ```
 
-### 仲壬（庸）
+## 仲壬（庸）
 ```
 仲壬（？～公元前1582年），又名中壬，本名子庸，汤第三子，商朝第三任国王。
 ```
 
-### 太甲（至）
+## 太甲（至）
 ```
 太甲（生卒年不详），子姓，名至。商汤嫡长孙，太丁之子，外丙和仲壬之侄，商朝第四位君主。太甲继位之初，由四朝元老伊尹辅政，伊尹连写《肆命》、《祖后》等几篇文章，教导太甲遵照祖先的法制，努力做一位明君。在伊尹的督促下，太甲在继位后前两年，其作为还过得去，但从第三年起就不行了，他任意地发号施令，一味享乐，
 ```
 > 伊尹放逐太甲
 > 太甲十年太甲恢复权力，商朝第一次兴盛。
 
-### 沃丁（绚）
+## 沃丁（绚）
 ```
 沃丁（？-？），亦称羌丁，子姓，名绚，太甲之子，商朝第五任君主，沃丁在其父太甲死后继位。&nbsp;沃丁以天子之礼将伊尹安葬于都城亳附近，以表彰他对商朝做出的伟大贡献。
 ```
 
-### 太庚（辩）
+## 太庚（辩）
 ```
 太庚（生卒年不详），又作大庚，误称小庚。姓子名辩，是商朝第六任君主。他是沃丁之弟，太甲之子。
 ```
 
-### 小甲（高）
+## 小甲（高）
 ```
 小甲（生卒年不详），名高，太庚之子，是中国商朝的第七位君王。
 ```
 
 
 
-### 雍己（密）
+## 雍己（密）
 ```
 雍己本名密，是太庚之子，小甲之弟、太戊之兄，小甲去世后他继承了商朝君主之位。
 ```
 > 雍己在位时诸侯不朝，商朝第一次衰落。
 
 
-### 太戊（伷）
+## 太戊（伷）
 ```
 太戊，甲骨文作大太戊、天戊，子姓，名伷，商王太甲之孙，太庚之子，小甲和雍己的弟弟，商朝君主，在位七十五年。太戊在位时期，勤政修德，治国抚民，任用伊陟、巫咸掌握国政，各诸侯纷纷归顺，使商朝再度兴盛。太戊与太甲、祖乙并称三示（即三位有贡献的君主）。太戊死后，庙号中宗，葬于太戊陵（在今河南省内黄县亳城乡刘
 ```
@@ -98,7 +96,7 @@ description: 商汤灭夏，创立商王朝。
 
 
 
-### 仲丁（庄）
+## 仲丁（庄）
 ```
 仲丁（生卒年不详），亦作中丁，子姓，名庄，商王太戊之子，商朝第十任君主。
 ```
@@ -107,12 +105,12 @@ description: 商汤灭夏，创立商王朝。
 
 
 
-### 外壬（发）
+## 外壬（发）
 ```
 外壬（？-？），在甲骨文中被称作卜壬，名发，商朝第十一任君主。商王太戊子，商王仲丁弟，仲丁死后继位。在位15年（一说在位10年），病死，葬地不明。
 ```
 
-### 河亶甲（整）
+## 河亶甲（整）
 ```
 河亶甲（？- ？），甲骨文作戋甲，吕氏春秋作整甲，名整，是商王太戊之子，商王仲丁和外壬的弟弟，商朝第十二任君主。在其兄外壬死后继位。河亶甲在位时，商朝再度衰落，无奈之下，他北上迁都于相（今河南安阳内黄），以缓解内外交困的局面。河亶甲还曾出兵征伐东南方的兰族和班方，在一些方国的帮助下，使叛乱的诸侯重新
 ```
@@ -121,7 +119,7 @@ description: 商汤灭夏，创立商王朝。
 
 
 
-### 祖乙（滕）
+## 祖乙（滕）
 ```
 祖乙，生卒年不详，亦称且乙，子姓，名滕（一作胜），商王河亶甲之子，商朝第十三任君主。河亶甲死后，祖乙继任君主之位。祖乙在位19年去世，庙号中宗，死后由其子祖辛继位。祖乙在位时期，将都城从相（今河南省内黄县）迁耿（今山西省河津市）。次年，又从耿迁到邢（今河北省邢台市）。后因邢发生河患，于是再次迁都于庇
 ```
@@ -129,35 +127,35 @@ description: 商汤灭夏，创立商王朝。
 > 祖乙在位时都城自相迁邢，商朝三次复兴，卜辞记载曰珥(日全食时看到的太阳表面活动的现象)，这是人类关于日珥的首次记录。
 
 
-### 祖辛（旦）
+## 祖辛（旦）
 ```
 祖辛（生卒年不详），甲骨文作“且辛”，姓子名旦，商王祖乙之子，祖乙去世后继位。
 ```
 
-### 沃甲（逾）
+## 沃甲（逾）
 ```
 沃甲，《世本》、《竹书纪年》作开甲，甲骨文作羌甲，子姓，名逾，商王祖辛之弟，商朝第十五任君主。
 ```
 
-### 祖丁（新）
+## 祖丁（新）
 ```
 祖丁，在甲骨文中作且丁，姓子名新，商朝君主。祖辛之子，前任君主沃甲之侄，南庚堂兄，盘庚之父。
 ```
 
-### 南庚（更）
+## 南庚（更）
 ```
 南庚（生卒年不详），姓子名更，商朝第十七任君主。《史记·殷本纪》记载他是沃甲之子、祖丁堂弟，而殷墟卜辞说他为祖辛之子、祖丁之弟。祖丁死后继位。
 ```
 > 南庚在位时都城自庇迁奄。
 
-### 阳甲（和）
+## 阳甲（和）
 ```
 阳甲是商朝君主，在甲骨文中称象甲，姓子名和，前任商王祖丁之子，后任商王盘庚之兄。《今本竹书纪年》称阳甲在位时曾西征丹山戎。阳甲时期商朝再度衰落。自中丁时期起，王位继承开始混乱，引致诸侯不来朝。
 ```
 
 > 第三次衰退
 
-### 盘庚（旬）
+## 盘庚（旬）
 ```
 盘庚，甲骨文作般庚，生卒年不详，子姓，名旬，商王祖丁之子，阳甲之弟，商朝第十九位君主（不计太丁）。阳甲死后，盘庚继位，是商朝一位很有作为的君主。他为了改变当时社会不安定的局面，决心再一次迁都，搬迁到殷（今河南安阳），史称“盘庚迁殷”。盘庚迁殷后，整顿商朝的政治，发展经济，使衰落的商朝出现复兴的局面。
 ```
@@ -165,46 +163,46 @@ description: 商汤灭夏，创立商王朝。
 > 都城自奄迁殷，彼此未再迁都。(盘庚迁殷)
 > 商朝第四次复兴，全盛时期。
 
-### 小辛（颂）
+## 小辛（颂）
 ```
 小辛是商朝第二十位国君，商王盘庚之弟，商王祖丁之子，姓子名颂。小辛在盘庚死后继位，相传在位21年。
 ```
 
 > 第四次衰败
 
-### 小乙（敛）
+## 小乙（敛）
 ```
 小乙（？-？），姓子名敛，商朝第二十一位君主。他是前任君主小辛之弟，元年丁酉，王即位，居殷（河南安阳殷墟）。《外记》载其在位21年。死后由儿子武丁继位。
 ```
 
-### 武丁（昭）
+## 武丁（昭）
 ```
 武丁（？－公元前1192年），子姓，名昭，商王盘庚之侄，商王小乙之子，商朝第二十二任君主，夏商周断代工程将武丁在位时间定为公元前1250年—公元前1192年。武丁在位时期，勤于政事，任用刑徒出身的傅说及甘盘、祖己等贤能之人辅政，励精图治，使商朝政治、经济、军事、文化得到空前发展，史称“武丁盛世”。
 ```
 > 前1250年武丁即位，举傅说为相，商朝大治第五次兴盛。
 
 
-### 祖庚（跃）
+## 祖庚（跃）
 ```
 祖庚是商朝著名国王武丁次子，名曜。祖庚有长兄祖己，祖己因受后母诬陷，被父亲武丁逐出京城，后含冤而死。三弟祖甲为后母所生，为表示不愿与兄长争夺王位，便暗暗地离宫出走，武丁病死，祖庚得以继位。祖庚在位7年，去世后由三弟祖甲继位。
 ```
 
-### 祖甲（载）
+## 祖甲（载）
 ```
 祖甲（？- 公元前1152年），亦称且甲、帝甲，子姓，名载，商王武丁之子，商王祖庚之弟，商朝第二十四任君主，今本《竹书纪年》称他在位三十三年，曾征伐西戎，他在位早期尚能照顾民众，商朝中兴。祖甲死后由其子廪辛即位。
 ```
 
-### 廪辛（先）
+## 廪辛（先）
 ```
 廪辛，《竹书纪年》作冯辛，姓子名先，是中国商朝的君主，前任商王祖甲之子。他死后由弟庚丁继位。
 ```
 
-### 庚丁（嚣）
+## 庚丁（嚣）
 ```
 庚丁（生年不详一前1147）姓子名嚣，甲骨文作康且丁，又作康丁，《史记》、《竹书纪年》作庚丁，祖甲的儿子，廪辛的弟弟。廪辛死后继位。 《史记·殷本纪》云：“帝廪辛崩，弟庚丁立，是为帝庚丁。”
 ```
 
-### 武乙（瞿）
+## 武乙（瞿）
 ```
 武乙（？―公元前1113年），子姓，名瞿，商王庚丁之子，商朝第二十七任君主，夏商周断代工程将其在位时间定为公元前1147年—公元前1113年在位。公元前1147年，庚丁去世，武乙继位。公元前1113年，武乙去世，死后其子文丁继位。武乙作为商代后期的一位重要君王，努力挽救国势，但是成效不大。武乙在神权
 ```
@@ -213,17 +211,17 @@ description: 商汤灭夏，创立商王朝。
 
 > 前1113年武乙无道，猎于河渭，遭雷而死。文丁即位。
 
-### 文丁（托）
+## 文丁（托）
 ```
 文丁（？—前1102年），《史记》作太丁，竹书纪年作大丁，子姓，名托，商王武乙之子，商朝第二十八任君主，在位11年。武乙去世后，文丁继位。武乙时，西方的周部落逐渐强大。文丁在位期间，周侯季历伐戎有功，文丁忌惮，先嘉其功而杀之，商周关系恶化。文丁死后，其子帝乙继位。
 ```
 
-### 帝乙（羡）
+## 帝乙（羡）
 ```
 帝乙（？—公元前1076年），子姓，名羡，商王文丁（《史记》作太丁）之子，商朝第二十九任君主，夏商周断代工程将他在位时间定为公元前1101年—公元前1076年，共在位26年。公元前1102年，文丁去世，帝乙继位。帝乙继位后，商朝国势已趋于没落。帝乙在位末年，迁都于沬（mèi）（即朝歌，今河南省淇县）
 ```
 
-### 帝辛（受）
+## 帝辛（受）
 ```
 帝辛（？-前1046年？），子姓，名受（一作受德），商朝末代君主，世称“纣”（一说为“受”之音转）、“商纣王”等。夏商周断代工程将其在位时间推定为三十年（前1075年-前1046年）。帝辛是帝乙少子，继位后，在内营建朝歌、加重赋敛、严格周祭制度、改变用人政策、推行严刑峻法，对外屡次发兵攻打东夷诸部落
 ```
@@ -234,7 +232,7 @@ description: 商汤灭夏，创立商王朝。
 
 
 
-商纪
+```
 
 
 成汤
@@ -710,6 +708,6 @@ description: 商汤灭夏，创立商王朝。
 纲　商亡。
 
 右商二十八主，计六百四十四年。
-
+```
 
 >  部分资料来自网络，如侵犯您的权益，请联系我删除！
