--- a/_posts/2022-03-03-中华简史_宋辽金.md
+++ b/_posts/2022-03-03-中华简史_宋辽金.md
@@ -5,489 +5,487 @@ date: 2022-12-26 09:52:00
 description: 少数民族入侵中原，民族大融和的重要时期。
 ---
 
-## 中华简史-宋辽金卷
-
-### 概述
+## 概述
 ```
 北宋（960年—1127年），是中国历史上继五代十国之后的朝代，传九位皇帝，享国167年。显德七年（960年），后周诸将发动陈桥兵变，拥立赵匡胤为帝，建立宋朝，定都东京开封府靖康元年（1126年）发生靖康之难，次年被金国灭亡。
 因宋代较辽金存在周期长，以宋年号纪事
 ```
-### 早期
-#### 公元948年
+## 早期
+### 公元948年
 > 赵匡胤投身后汉枢密使郭威帐下，随郭威征讨河中节度使李守贞叛乱，屡立战功
-#### 公元951年
+### 公元951年
 > 郭威称帝，建立后周，赵匡胤补任东西班行首，拜滑州副指挥使
-#### 公元953年
+### 公元953年
 > 郭威养子柴荣（后周世宗）为开封府尹，赵匡胤转为开封府马直军使。
-#### 公元954年
+### 公元954年
 > 柴荣即位，擢升赵匡胤执掌禁军
 > 北汉、契丹联军入侵，柴荣御驾亲征，赵匡胤以死拼杀在泽州高平大破北汉军
-#### 公元956年
+### 公元956年
 > 赵匡胤跟随柴荣征伐淮南，打败南唐军万余人，斩杀南唐兵马都监何延锡等人。
-#### 公元957年
+### 公元957年
 > 赵匡胤随柴荣出征寿春，攻克连珠寨，乘势攻下寿州
 > 赵匡胤跟随柴荣征伐濠州、泗州，擒获南唐都应援使陈承昭
-#### 公元958年
+### 公元958年
 > 柴荣南下扬州，赵匡胤在迎銮江口、瓜步连破南唐军。南唐被迫求和，割江北与后周
-#### 公元959年
+### 公元959年
 > 柴荣北伐，打退几千名契丹骑兵，平定关南
 > 柴荣驾崩，年仅七岁的柴宗训（后周恭帝）继位，赵匡胤改任归德军节度使
-#### 公元960年
+### 公元960年
 > 后周朝廷风闻契丹和北汉联兵南下，宰相范质等人不辨真假派遣赵匡胤统军北上抵御。
 
-### 北宋（960年—1127年）
+## 北宋（960年—1127年）
 
-### 太祖 启运立极英武睿文神德圣功至明大孝皇帝 赵匡胤 960年—976年
-#### 建隆元年 960 
+## 太祖 启运立极英武睿文神德圣功至明大孝皇帝 赵匡胤 960年—976年
+### 建隆元年 960 
 > 陈桥兵变，赵匡胤黄袍加身
 > 范质等人宣布柴宗训禅位，赵匡胤在开封崇元殿正式登皇帝位，下诏改封柴宗训为郑王
 > 赵匡胤平定了昭义节度使李筠、淮南节度使李重进发动的叛乱，巩固了政权
 > 在赵普的帮助谋划下，赵匡胤加强中央集权，改革军制，发展生产，巩固统治
-#### 建隆三年
+### 建隆三年
 > 赵匡胤部署兵力防止辽（契丹）、北汉南掠；挥师南下，准备开始统一战争。
 > 武平军节度使周行逢病死，张文表兵变占领潭州， 周保权为讨张文表，向宋求援。
-#### 建隆四年
+### 建隆四年
 > 慕容延，李处耘率兵以助湖南讨张文表为名，借道荆南。攻占江陵城，荆南遂亡
 > 周保权知宋欲图湖南，命张从富阻截。宋军占领岳州占领朗州，周保权被俘，湖南遂平
-#### 乾德元年 963
-#### 乾德二年
+### 乾德元年 963
+### 乾德二年
 > 赵匡胤命分兵两路会攻成都。孟昶命王昭远率兵扼守利州、剑门。北路宋军占领利州
-#### 乾德三年
+### 乾德三年
 > 北路军突破剑门大败蜀军，继占领剑州。两路直逼成都，孟昶举城投降，后蜀灭亡
-#### 开宝元年 968
-#### 开宝三年
+### 开宝元年 968
+### 开宝三年
 > 赵匡胤命潘美直趋贺州。潘美歼南汉军主力，宋军伏击获胜，杀伍彦柔，占领贺州
 > 南汉都统李承渥率兵十万于莲花峰下列象阵迎击，宋军以强弓劲弩破阵，占领韶州
-#### 开宝三年
+### 开宝三年
 > 宋军攻克英、雄三州。以火攻破南汉招讨使郭崇岳，攻陷兴王府，刘鋹投降，南汉灭亡
-#### 开宝七年
+### 开宝七年
 > 曹彬偕潘美出荆南，率军顺长江东下，水陆并进，攻破池州，占领采石
-#### 开宝八年
+### 开宝八年
 > 宋军破溧水，与十万南唐军激战于秦淮河，大败南唐军，攻破江宁，李煜投降南唐灭亡
-#### 开宝九年
+### 开宝九年
 > 赵匡胤召其弟赵光义饮酒，共宿宫中；隔日赵匡胤被发现在万岁殿逝世
 
-### 太宗 至仁应道神功圣德文武睿烈大明广孝皇帝 赵光义 976年—997年
-#### 太平兴国元年 976
+## 太宗 至仁应道神功圣德文武睿烈大明广孝皇帝 赵光义 976年—997年
+### 太平兴国元年 976
 > 赵匡胤驾崩。晋王赵光义即位
 > 赵光义继位后注重培养和提拔自己的亲信。慢慢替换宋太祖朝的大臣
 > 赵光义扩大科举的取士人数
-#### 太平兴国三年
+### 太平兴国三年
 > 割据福建漳泉两府的陈洪进，割据两浙的吴越钱氏相继向宋廷纳土归降
-#### 太平兴国四年
+### 太平兴国四年
 > 赵光义派潘美等围攻北汉都城太原，击退辽国援兵，灭亡北汉
 > 赵光义展开北伐。收复河北易州和涿州。与辽人激战中受伤中箭仓惶撤离，北伐失败
-#### 太平兴国六年
+### 太平兴国六年
 > 白藤江之战中先胜后败，交趾（越南）得以保持独立地位
-#### 雍熙元年 984
-#### 雍熙三年
+### 雍熙元年 984
+### 雍熙三年
 > 赵光义遣潘美、杨业等五位大将再行北伐。主力东路军屡遭辽军挫败于岐沟关大败而溃
 > 杨业被辽军俘虏，在狱中绝食三日而死
-#### 端拱元年 988
-#### 淳化元年 990 
-#### 淳化四年
+### 端拱元年 988
+### 淳化元年 990 
+### 淳化四年
 > 王小波和李顺领导的农民起义在四川爆发，得到蜀地农民呼应。
-#### 淳化五年
+### 淳化五年
 > 起义军占据成都，建立大蜀政权，赵光义派遣大军讨之
-#### 至道元年 995
+### 至道元年 995
 > 在寇准的支持下，赵光义三子寿王赵元侃被立为皇太子，改名赵恒
-#### 至道二年
+### 至道二年
 > 起义军彻底失败
-#### 至道三年
+### 至道三年
 > 赵光义驾崩于万岁殿
 
 
-### 真宗 应符稽古神功让德文明武定章圣元孝皇帝 赵恒 997年—1022年
-#### 至道三年
+## 真宗 应符稽古神功让德文明武定章圣元孝皇帝 赵恒 997年—1022年
+### 至道三年
 > 太宗驾崩。太监王继恩和李皇后谋划的宫廷政变，宰相吕端挫败政变，扶立赵恒继位
 > 即位之初，任用李沆等人为宰相，勤于政事，减免五代十国以来的税赋
 > 引入暹罗良种水稻，农作物产量倍增
 > 纺织、染色、造纸、制瓷等手工业、商业蓬勃发展，贸易盛况空前
-#### 咸平元年 998
-#### 咸平二年
+### 咸平元年 998
+### 咸平二年
 > 辽朝在边境挑衅，掠夺财物，屠杀百姓
-#### 景德元年 1004
+### 景德元年 1004
 > 辽承天太后萧绰、辽圣宗耶律隆绪率军南下，直逼澶州城，威胁北宋的都城东京
-#### 景德二年
+### 景德二年
 > 赵恒入澶州城，在寇准的要求下上城墙鼓舞士气，使得宋军士气大振。
 > 萧太后见辽军陷入被动请求议和。赵恒派曹利用出使。签订澶渊之盟..
-#### 大中元年祥符1008
+### 大中元年祥符1008
 > 赵恒伪造梦中天书，东封泰山，祭祀后土地抵。大赦天下，一时轰动
 > 热衷“祥瑞”粉饰太平，听任王钦若、丁谓等参与朝政。朝政大事多由皇后刘氏决断
-#### 天禧元年 1017 
-#### 乾兴元年 1022
+### 天禧元年 1017 
+### 乾兴元年 1022
 > 赵恒于东京延庆殿驾崩
 
-### 仁宗 体天法道极功全德神文圣武睿哲明孝皇帝 赵祯 1022年—1063年
-#### 乾兴元年 1022 
+## 仁宗 体天法道极功全德神文圣武睿哲明孝皇帝 赵祯 1022年—1063年
+### 乾兴元年 1022 
 > 赵恒逝世。年仅十三岁赵祯即皇帝位，由皇太后刘氏代行处理军国事务
 > 越南李朝、受宋册封为南平王的李公蕴向宋朝通好，四次来朝贡
-#### 天圣元年 1023 
+### 天圣元年 1023 
 > 宋廷设益州交子务，正式发行交子（中国最早的纸币）
-#### 天圣四年
+### 天圣四年
 > 诏令王惟一主持铸造针灸铜人为范。
-#### 天圣五年
+### 天圣五年
 > 官员燕肃复原了古代指示方向、记录车辆行过距离的装置指南车、记里鼓车
-#### 天圣六年
+### 天圣六年
 > 室利佛逝遣使进贡
-#### 天圣八年
+### 天圣八年
 > 占城国遣使进贡
 > 高丽国王王询遣使进贡
-#### 天圣末年
+### 天圣末年
 > 西域的归义军及甘州回鹘、龟兹国、喀喇汗国等政权多次遣使来朝。双方往来频繁
-#### 明道元年 1032 
-#### 明道二年
+### 明道元年 1032 
+### 明道二年
 > 刘太后去世，才开始亲政
 > 赵祯性情宽厚，不事奢华，能够约束自己，对待臣僚、侍从宽厚
-#### 景祐元年 1034
-#### 景祐五年
+### 景祐元年 1034
+### 景祐五年
 > 夏景宗李元昊称帝，国号夏，史称西夏。宋夏间维持三十年的和平政局再次破裂。
-#### 宝元元年 1038
-#### 宝元三年
+### 宝元元年 1038
+### 宝元三年
 > 宋、夏在三川口、好水川及定川寨展开三次大战，宋军皆先胜后败
-#### 康定元年 1040
-#### 康定二年
+### 康定元年 1040
+### 康定二年
 > 赵祯命丁度与曾公亮等编纂《武经总要》40卷
-#### 庆历元年 1041
-#### 庆历三年
+### 庆历元年 1041
+### 庆历三年
 > 赵祯授擢拔欧阳修等人提出十项改革主张，并渐次颁布实施，颁发全国。
-#### 庆历四年
+### 庆历四年
 > 夏在战争中伤亡近半，国力难支，且与辽国关系恶化。订立“庆历和议”
-#### 庆历五年
+### 庆历五年
 > 新政触犯了贵族官僚的利益，范仲淹、欧阳修等人相继排斥出朝廷，新政彻底失败
-#### 皇祐元年 1049
-#### 皇祐四年
+### 皇祐元年 1049
+### 皇祐四年
 > 广西僮族首领侬智高举兵反宋。赵祯任用狄青、余靖率兵南征
-#### 皇祐五年
+### 皇祐五年
 > 狄青夜袭昆仑关，于归仁铺之战大败侬智高。侬智高遁走，后不知去向
-#### 至和元年1054年—1056年
-#### 嘉祐元年1056年—1063年
-#### 嘉祐二年
+### 至和元年1054年—1056年
+### 嘉祐元年1056年—1063年
+### 嘉祐二年
 > 设立校正医书局，对历代重要医籍进行搜集整理、考证、校勘、推广
-#### 嘉祐七年
+### 嘉祐七年
 > 经宰相韩琦及大臣包拯、范镇、司马光等反复劝谏，立赵宗实为皇子，赐名曙。
-#### 嘉祐八年
+### 嘉祐八年
 > 赵祯重病不起，赵祯于东京福宁殿驾崩
 
-### 英宗 体干应历隆功盛德宪文肃武睿圣宣孝皇帝 赵曙 1063年—1067年
-#### 嘉祐八年
+## 英宗 体干应历隆功盛德宪文肃武睿圣宣孝皇帝 赵曙 1063年—1067年
+### 嘉祐八年
 > 仁宗逝世。曹皇后发布遗诏，让赵曙继承皇帝位
 > 赵曙即位因生病，曹太后垂帘听政。一些宦官向曹太后说赵曙的坏话，使两宫嫌隙萌生
 > 为了调解两宫矛盾，韩琦和欧阳修在大家的劝解下，两宫之间的矛盾得以逐步缓和
-#### 治平元年 1064
+### 治平元年 1064
 > 赵曙病体恢复，曹太后撤帘还政
 > 光化军、高邮军发生水灾，赵曙派遣使臣疏治河道，赈济抚恤灾民，免除灾民赋税
 > 西蕃瞎毡的儿子瞎欺米征归附宋朝
 > 司马光写成了一部《历年图》进呈给赵曙，赵曙对此大加赞赏
-#### 治平二年
+### 治平二年
 > 濮议”事件（韩琦提出赵曙生父的名份问题，由此引发了一场持续18个月的论战）
-#### 治平三年
+### 治平三年
 > 赵曙再次生病，在宰相韩琦的建议下，立长子赵顼为太子
 > 赵曙命司马光设局专修《资治通鉴》
-#### 治平四年
+### 治平四年
 > 赵曙因病驾崩于福宁殿
 
-### 神宗 绍天法古运德建功英文烈武钦仁圣孝皇帝 赵顼 1067年—1085年
-#### 治平四年
+## 神宗 绍天法古运德建功英文烈武钦仁圣孝皇帝 赵顼 1067年—1085年
+### 治平四年
 > 宋英宗驾崩，太子赵顼继位
 > 赵顼即位时，北宋的统治面临军费开支庞大，官僚机构臃肿而政费繁多等问题
-#### 熙宁元年 1068
+### 熙宁元年 1068
 > 王安石入京受命
-#### 熙宁二年
+### 熙宁二年
 > 赵顼任命王安石为参知政事负责变法事宜
 > 新法出台招来朝野间指责， 赵顼对王安石表示支持，罢退对变法持否定意见的官员
-#### 熙宁三年
+### 熙宁三年
 > 擢王安石为同中书门下平章事，青苗法、免役法、方田均税法等新法先后颁行天下
-#### 熙宁五年
+### 熙宁五年
 > 王安石派新法主将章惇开发两江地区。湘西地区逐渐得到开发
 > 王韶经略河湟地区，熙河路辖区终于全部占有，对西夏起到了抑制作用
-#### 熙宁八年
+### 熙宁八年
 > 交趾军攻占宋古万寨，廉州、钦州
-#### 熙宁九年
+### 熙宁九年
 > 王安石因身体有病，儿子壮年而逝，王安石悲痛欲绝，王安石辞去相位，出判江宁府
 > 宋任命郭逵、燕达统兵攻入交趾境内，击败交趾的象阵，交趾军溃逃
 > 宋军攻占门州，设伏诱敌，宋军伏兵齐发，交趾大败，洪真太子战死
-#### 熙宁十年
+### 熙宁十年
 > 赵顼亲自主持变法。基本建立起了更有利于君主专制的中央集权制
 > 交趾王李乾德割地求和，宋军统帅郭逵接受降书后班师北返
-#### 元丰元年 1078
-#### 元丰四年
+### 元丰元年 1078
+### 元丰四年
 > 西夏秉常与宋议和被梁太后囚禁。宋五路攻夏。
 > 宋刘昌祚攻灵州，主帅高遵裕嫉功制止贻误战机，反被西夏决河水所淹，被迫退回
-#### 元丰五年
+### 元丰五年
 > 神宗修筑永乐城屯军遭西夏围城，永乐城失陷，神宗失去斗志
-#### 元丰八年
+### 元丰八年
 > 宋神宗赵顼病情恶化。神宗六子赵佣，改名为“煦”，被立为太子
 > 宋神宗驾崩
 
-### 哲宗 宪元继道显德定功钦文睿武齐圣昭孝皇帝 赵煦 1085年—1100年
-#### 元丰八年
+## 哲宗 宪元继道显德定功钦文睿武齐圣昭孝皇帝 赵煦 1085年—1100年
+### 元丰八年
 > 神宗驾崩，年仅十岁的赵煦即位。高太后临朝听政
 > 高太后执政后，任命司马光、吕公著参与朝政。废除新法的理论依据，新法遂渐被废除
 > 废罢保甲团教，方田均税法、市易法、保马法等相继被废
 > 元祐更化（旧党对新党进行斩草除根式的清算。）
-#### 元祐元年 1086
-#### 元祐二年-三年
+### 元祐元年 1086
+### 元祐二年-三年
 > 西南五蕃（龙蕃、张蕃、程蕃、罗蕃、韦蕃）频繁遣使入贡
-#### 元祐六年
+### 元祐六年
 > 拜占庭帝国（中国史籍称拂箖）遣使到访。
-#### 元祐七年
+### 元祐七年
 > 西夏梁太后亲征。章楶截断西夏军，使西夏大败，梁太后仅以身免
-#### 元祐八年
+### 元祐八年
 > 高太后崩逝，赵煦开始亲政。变法时重要人物章惇，大力打击元祐大臣
 > 赵煦重用章惇、曾布等革新派，恢复王安石变法中的保甲法、免役法、青苗法等
-#### 绍圣元年 1094 
-#### 绍圣五年
+### 绍圣元年 1094 
+### 绍圣五年
 > 平夏城之役，击败敌军三十万，迫使西夏求和
-#### 元符元年 1098
-#### 元符二年
+### 元符元年 1098
+### 元符二年
 > 赵煦派将军王愍、王赡、王厚等攻取邈川，占领青唐，降服唃厮啰政权主瞎征
-#### 元符三年
+### 元符三年
 > 赵煦病重，在福宁殿崩逝
 
-### 徽宗 体神合道骏烈逊功圣文仁德宪慈显孝皇帝 赵佶 1100年—1126年
-#### 元符三年
+## 徽宗 体神合道骏烈逊功圣文仁德宪慈显孝皇帝 赵佶 1100年—1126年
+### 元符三年
 > 宋哲宗病死，向太后在曾布、蔡卞、许将等执政的支持下，立赵佶为帝
 > 徽宗即位后，向太后当政任命守旧派韩忠彦为执政；恢复被贬逐的守旧派官员的名位
-#### 建中靖国元年 1101
+### 建中靖国元年 1101
 > 邓洵武首创徽宗应绍述神宗之说，攻击左相韩忠彦并推荐蔡京为相
-#### 崇宁元年 1102
+### 崇宁元年 1102
 > 左相韩忠彦被贬任知府，右相曾布被贬任知州，蔡京升任右相，不久又升为左相
 > 蔡京无恶不作，贿赂公行，卖官鬻爵，增税加赋，搜刮民财
-#### 大观元年 1107
-#### 政和元年 1111
+### 大观元年 1107
+### 政和元年 1111
 > 郑允中、童贯使辽，辽人马植献计与女真结盟，共灭辽朝，徽宗赐马植姓名为赵良嗣
-#### 重和元年 1118 
+### 重和元年 1118 
 > 马政使金口头表达宋金联合攻辽及燕、云地区归来，金遣散覩等人使宋商议结盟事务
-#### 宣和元年 1119 
+### 宣和元年 1119 
 > 宋江起义于河北路，北宋朝廷曾下诏进行招降。但宋江未受招安
-#### 宣和二年
+### 宣和二年
 > 宋江转战南下京东路，活动于青、济、郓、濮诸州境内
 > 两浙方腊起义，建立政权，攻占青溪县城。两浙人民纷纷响应，起义军攻占睦州、歙州
 > 徽宗派童贯率军南下，起义军攻占两浙路首府杭州，婺州、衢州、处州
 > 宋遣赵良嗣、马政先后使金，双方议定夹攻辽朝，订立“海上之盟”
 > 宋军腐败，两次攻打辽南京，均被辽守军打败，南京由金军攻占
-#### 宣和三年
+### 宣和三年
 > 宋江起义军在海州为知州张叔夜伏兵抓宋江副将副贼，宋江投降
 > 方腊于帮源洞在官军的夹击下，激战数日后战败，方腊为韩世忠所俘，起义失败
-#### 宣和五年
+### 宣和五年
 > 金方将燕京及所属九州中的西部六州归宋。但燕京居民大部已被金俘往东北作奴隶，
-#### 宣和七年
+### 宣和七年
 > 金国消灭了辽国之后，分兵两路南下进攻宋朝，直逼宋朝国都开封
 
-### 钦宗 恭文顺德仁孝皇帝 赵桓 1126年—1127年
-#### 宣和七年
+## 钦宗 恭文顺德仁孝皇帝 赵桓 1126年—1127年
+### 宣和七年
 > 赵桓受父宋徽宗赵佶禅让登基
 > 贬蔡京、童贯等人，重用李纲抗金。懦弱无能，优柔寡断
-#### 靖康元年 1126 
+### 靖康元年 1126 
 > 东京城破金军提出“和议”向宋王朝勒索。宋钦宗进金营求降
-#### 靖康二年
+### 靖康二年
 > 金军拘禁徽宗、钦宗，金主废宋徽宗、宋钦宗立原宋朝宰相张邦昌为伪楚皇帝
 > 金军俘虏徽、钦二帝和宗室、贵戚北撤。北宋灭亡、
 > 徽、钦二帝被掠去后，于1135年和1156年死于金国
 
-### 南宋（1127年—1279年）
+## 南宋（1127年—1279年）
 
 ```
 南宋（1127年-1279年），宋朝第二个时期，以临安为都城，史称南宋，历九帝，享国152年。1127年，宋徽宗之子赵构于应天府建国称帝，是为宋高宗。1276年元军攻入临安，朝廷流亡南方，文天祥等忠臣回天无力。1279年崖山海战宣告灭亡。
 
 ```
 
-### 高宗 受命中兴全功至德圣神武文昭仁宪孝皇帝 赵构 1127年—1162年
-#### 靖康元年
+## 高宗 受命中兴全功至德圣神武文昭仁宪孝皇帝 赵构 1127年—1162年
+### 靖康元年
 > 金兵围开封府，宋割三镇投降，金军扣留赵构。后宋廷更换肃王赵枢，赵构得以回朝
 > 金兵包围开封时，赵构率河北兵马救援京师，后转移到东平府以避敌锋
-#### 靖康二年
+### 靖康二年
 > 为了摆脱军费开支巨大造成的财政困境，发展海外贸易以拓展财源
 > 南宋出现了地方性的纸币，如东南会子、湖会、淮交等
-#### 建炎元年 1127
+### 建炎元年 1127
 > 金兵俘徽、钦二宗北去后，赵构在南京应天府即位
 > 起用抗战派李纲为宰相，不久赶走李纲，同宠臣汪伯彦、黄潜善等弃中原逃到扬州
-#### 建炎二年
+### 建炎二年
 > 金军兵临山东，镇守东京开封的将领宗泽病逝，赵构任命杜充接替宗泽镇守汴梁
 > 金兵奔袭扬州，他狼狈渡江，迫于舆论罢免汪伯彦、黄潜善等人
-#### 建炎三年
+### 建炎三年
 > 苗傅和刘正彦发动兵变，杀王渊和一批宦官，逼迫宋高宗退位，史称苗刘兵变
 > 文臣吕颐浩、张浚和武将韩世忠、刘光世、张俊起兵“勤王”，宋高宗得以“复辟”。
 > 向金朝乞降，金兵渡江南侵，宋高宗南逃，漂泊海上，逃到温州
-#### 建炎四年
+### 建炎四年
 > 韩世忠围堵金兀术，经黄天荡之战，大挫金军士气，高宗迁都临安
 > 金军为攻占陕西，在富平击败宋军反攻的作战出其不意，一举获胜
 > 金兵暂停南侵，宋高宗镇压荆湖、江西、福建等路的农民起义军和盗匪，巩固统治
 > 命岳飞、韩世忠、吴玠等人负责江、淮防务，任秦桧为宰相，压制岳飞等主战派的要求
-#### 绍兴元年 1131 
+### 绍兴元年 1131 
 > 抗金将领吴玠、吴璘兄弟俩指挥挫败金军，阻止了金军的西线攻势，保住了川陕门户
-#### 绍兴二年
+### 绍兴二年
 高宗迁都杭州，南宋朝廷初步在东南站稳了脚跟
-#### 绍兴三年
+### 绍兴三年
 > 在川陕之战中，金军因粮草不继北撤，吴玠乘机袭击金军后队，王彦乘势收复金州
-#### 绍兴十年
+### 绍兴十年
 > 对金战争中节节取胜，宋高宗担心将领功大势重、下令各路宋军班师
-#### 绍兴十一年
+### 绍兴十一年
 > 解除岳飞、韩世忠等大将的兵权，与秦桧制造岳飞父子谋反冤案，加以杀害
 > 宋高宗决定向金议和，同金朝签定了屈辱的绍兴和议，向金称臣纳贡
 > 金朝规定，秦桧成了终身宰相，宋高宗虽对他日益猜忌，却仍纵容他专权跋扈
 > 秦桧死后，宋高宗委任主和派万俟卨、汤思退等奸佞小人掌政，坚守对金和议条款
-#### 绍兴十二年
+### 绍兴十二年
 > 李椿年上言实行经界法。南宋的轻工业、文化产业、外贸非常繁荣
-#### 绍兴三十一年
+### 绍兴三十一年
 > 完颜亮大举南侵。南宋文臣虞允文率领军民于采石阻遏金军。金军未能如愿渡江南侵
 > 宋高宗遣使贺金世宗完颜雍即位，准备再次对金议和
-#### 绍兴三十二年
+### 绍兴三十二年
 > 宋高宗传位给养子赵昚
 
-### 元懿太子 赵旉 1130年—1130年
-#### 明受元年1130年
+## 元懿太子 赵旉 1130年—1130年
+### 明受元年1130年
 
-### 孝宗 绍统同道冠德昭功哲文神武明圣成孝皇帝 赵昚 1162年—1189年
-#### 绍兴三十二年
+## 孝宗 绍统同道冠德昭功哲文神武明圣成孝皇帝 赵昚 1162年—1189年
+### 绍兴三十二年
 > 赵构御以“倦勤”为由，传位给赵昚
 > 赵昚颁布手谕，召主战派老将张浚入朝，为名将岳飞冤狱平反，追复其原官
 > 赵昚始为被贬谪和罢免的主战派大臣平反复官。他重用主战派，积极备战
-#### 隆兴元年 1163
+### 隆兴元年 1163
 > 赵昚命张浚为主帅展开隆兴北伐。恢复灵壁、虹县和宿州等地
 > 赵昚命李显忠、邵宏渊攻打金军。邵宏渊动摇军心，金军乘势掩杀，宋军大败
-#### 隆兴二年
+### 隆兴二年
 > 金世宗发兵南下，攻占楚州、濠州，滁州等地，赵昚签订协议
-#### 乾道元年 1165 
-#### 乾道五年
+### 乾道元年 1165 
+### 乾道五年
 > 赵昚召虞允文入朝，积极为北伐作好准备
-#### 乾道六年
+### 乾道六年
 > 派范成大使金，提出归还河南陵寝之地和更改接受国书礼仪的要求。金世宗拒绝
-#### 乾道八年
+### 乾道八年
 > 赵昚颁布《乾道敕令格式》
-#### 淳熙元年1174年—1189年
-#### 淳熙三年
+### 淳熙元年1174年—1189年
+### 淳熙三年
 > 赵昚颁诏，修纂《淳熙条法事类》，作为大理寺和刑部处理案件的法律依据
-#### 淳熙十三年
+### 淳熙十三年
 > 临安府罢逐青吏，裁汰百司冗官
-#### 淳熙十四年
+### 淳熙十四年
 > 赵构崩于德寿宫中，赵昚让太子赵惇参与政事
-#### 淳熙十六年
+### 淳熙十六年
 > 赵昚禅位于赵惇
 
-### 光宗 循道宪仁明功茂德温文顺武圣哲慈孝皇帝 赵惇 1189年—1194年
-#### 淳熙十六年
+## 光宗 循道宪仁明功茂德温文顺武圣哲慈孝皇帝 赵惇 1189年—1194年
+### 淳熙十六年
 > 赵惇受父宋孝宗禅位登基
 > 光宗即位后因病情无法正常处理朝政，大权落皇后李氏之手。李后一门获得权势、财富
 > 孝宗阻挠宋光宗立嘉王赵扩为太子，加深了光宗对孝宗的猜忌
-#### 绍熙元年1190年—1194年
-#### 绍熙五年
+### 绍熙元年1190年—1194年
+### 绍熙五年
 > 赵汝愚、韩侂胄等人在太皇太后吴氏的支持下拥立嘉王赵扩登基
 
-### 宁宗 法天备道纯德茂功仁文哲武圣睿恭孝皇帝 赵扩 1194年—1224年
-#### 绍熙五年
+## 宁宗 法天备道纯德茂功仁文哲武圣睿恭孝皇帝 赵扩 1194年—1224年
+### 绍熙五年
 > 赵汝愚、韩侂胄等人在太皇太后吴氏的支持下拥立嘉王赵扩登基
 > 宋宁宗继位后，重用了赵汝愚和韩侂胄两位大臣，韩侂胄排斥赵汝愚，
-#### 庆元元年1195年—1200年
+### 庆元元年1195年—1200年
 > 赵汝愚罢相，出知福州。反对赵汝愚罢官的人都陆续被窜逐
 > 宋宁宗在韩侂胄策划下，定理学为伪学，罢斥朱熹等理学家，史称“庆元党禁”
 > 宋宁宗不满金朝蛮横要求按旧时的礼仪行事，支持韩侂胄对金朝采取强硬的措施
-#### 庆元五年
+### 庆元五年
 > 杨忠辅创制新历，宁宗赐名为《统天历》
-#### 嘉泰元年1201年—1204年
-#### 嘉泰二年
+### 嘉泰元年1201年—1204年
+### 嘉泰二年
 > 宋宁宗令大臣谢深甫等人编修的《庆元条法事类》成书，该书共八十卷
-#### 嘉泰三年
+### 嘉泰三年
 > 宋宁宗采纳韩侂胄的建议，崇岳飞贬秦桧，改元开禧，表示了南宋的恢复之志
-#### 开禧元年 1205
-#### 开禧二年
+### 开禧元年 1205
+### 开禧二年
 > 宁宗削秦桧申王爵位，追究秦桧误国之罪：有力地打击了主和派
 > 宋宁宗下诏北伐金朝，史称“开禧北伐
 > 开战初期，宋军收复了一些地方，后金朝反击。皇甫斌被金军击溃，大败于溱水
 > 金军对宋军发起进攻，真州、扬州相继被占领，军事重镇和尚原与大散关也被金军所占
 > 韩侂胄想通过吴曦在四川战场挽回败局，吴曦暗通金兵，叛变称王。以宋朝战败而结束
 > 主和派史弥远和杨皇后密谋，除掉韩侂胄
-#### 开禧三年
+### 开禧三年
 > 韩侂胄在上朝途中被夏震派出的将士杀死于玉津园中。朝政被史弥远、钱象祖把持
-#### 嘉定元年 1208
+### 嘉定元年 1208
 > 南宋王朝与金朝签订了屈辱的“嘉定和议
-#### 嘉定十五年公元 1217
+### 嘉定十五年公元 1217
 > 金分道伐宋，赵扩下诏伐金，宋金之战复起，互有胜负
-#### 嘉定十九年公元 1221
+### 嘉定十九年公元 1221
 > 蒙古军进逼汴京，与北伐宋军接触，胶西宋军纷纷南逃，宋被迫派使者通好于蒙古
-#### 嘉定二十二年公元 1224
+### 嘉定二十二年公元 1224
 > 金哀宗派人同南宋通好，明令部下不得进攻南宋。宋金双方进入休战状态。
 > 史弥远乘宁宗病危，矫诏立贵诚为皇子，赐名昀，封成国公
 > 宋宁宗病死于临安宫中的福宁殿
 
-### 理宗 建道备德大功复兴烈文仁武圣明安孝皇帝 赵昀 1224年—1264年
-#### 嘉定二十二年 1224
+## 理宗 建道备德大功复兴烈文仁武圣明安孝皇帝 赵昀 1224年—1264年
+### 嘉定二十二年 1224
 > 宁宗驾崩，史弥远联杨皇后假传宁宗遗诏，废太子赵竑为济王，立赵昀为新帝
-#### 宝庆元年 1225
-#### 宝庆三年
+### 宝庆元年 1225
+### 宝庆三年
 > 封朱熹为信国公。朱熹和理学大师周敦颐、程颢、程颐、张载都先后被入祀孔庙
-#### 绍定元年 1228
-#### 绍定五年 
+### 绍定元年 1228
+### 绍定五年 
 > 蒙古遣王檝商议宋蒙合作夹击金朝。.金哀宗争取南宋的支持，理宗拒绝
-#### 绍定六年 
+### 绍定六年 
 > 宋军出兵攻占邓州等地，马蹬山大破金军，攻克唐州
 > 史嵩之命京湖兵马钤辖孟珙统兵二万，与蒙军联合围攻蔡州
-#### 端平元年 1234
+### 端平元年 1234
 > 蔡州城被攻破，金哀宗自缢而死。末帝完颜承麟为乱兵所杀，金国灭亡
 > 理宗派人往河南拜谒北宋皇陵，将金哀宗的遗骨奉于太庙，告慰徽、钦二帝在天之灵
 > 蒙军北撤，河南空虚。理宗命赵葵出兵河南。遭蒙军伏击，宋蒙战争自此全面爆发
-#### 嘉熙元年 1237
-#### 淳祐元年 1241
-#### 淳祐二年
+### 嘉熙元年 1237
+### 淳祐元年 1241
+### 淳祐二年
 > 理宗派遣在两淮抗蒙战争中战绩颇著的余玠入蜀主政，余玠创建了山城防御体系
-#### 淳祐九年
+### 淳祐九年
 > 理宗封阎氏为妃，不惜动用国库，为其修功德寺
-#### 宝祐元年1253
-#### 宝祐六年
+### 宝祐元年1253
+### 宝祐六年
 > 蒙古全面侵宋，丁大全隐匿军情不报，致使边防全线吃紧
-#### 开庆元年1259
+### 开庆元年1259
 > 有人上书指斥丁大全与董宋臣祸国殃民，理宗将丁大全罢相，后被挤落水中溺死
-#### 景定元年1260
-#### 景定五年
+### 景定元年1260
+### 景定五年
 > 赵昀病逝，在太子赵禥即皇帝位
 
-### 度宗 端文明武景孝皇帝 赵禥 1264年—1274年
-#### 景定末年 1264
+## 度宗 端文明武景孝皇帝 赵禥 1264年—1274年
+### 景定末年 1264
 > 理宗去世，度宗接受遗诏，即皇帝位
 > 宋度宗即位后，孱弱无能，整天宴坐后宫，与妃嫔们饮酒作乐
 > 宋度宗即位后封贾似道为太师。贾似道大肆淫乱，致使朝政昏暗
-#### 咸淳元年 1265
+### 咸淳元年 1265
 > 朝廷在江南实行经界法
-#### 咸淳四年
+### 咸淳四年
 > 忽必烈夺得蒙古汗位，派兵侵犯大宋四川地区，并沿汉江南下，包围襄阳
 > 朝廷取消官庄，改为包佃制
-#### 咸淳五年公元1269年
+### 咸淳五年公元1269年
 > 忽必烈围攻樊城。贾似道隐匿不报
-#### 咸淳九年
+### 咸淳九年
 > 樊城被元军攻破，襄阳守将吕文焕在粮尽援绝的情况下献城投降
-#### 咸淳十年公元
+### 咸淳十年公元
 > 度宗因酒色过度，死于临安宫中的福宁殿
 
-### 赵㬎 1274年—1276年
-#### 咸淳末年 1274
+## 赵㬎 1274年—1276年
+### 咸淳末年 1274
 > 宋度宗赵禥驾崩，赵奉遗诏即皇帝位，由谢太后临朝称诏
 > 元军向南宋发起了总攻，汉阳、鄂州相继陷落
-#### 德祐元年1275
+### 德祐元年1275
 > 元军攻克军事重镇安庆和池州，兵临建康城下
 > 贾似道抽调各路精兵阻击元军，宋军大败，死者无数，贾似道逃到扬州
 > 贾似道战败后，谢太后贬其为高州团练使，行至漳州为监押官郑虎臣所杀
 > 元伯颜进攻常州，姚訔、陈炤等奋勇抵抗。常州城被攻破，元军进行了野蛮的大屠杀
 > 元军逼近平江时，平江守将未经接战便献城投降
 > 蒙古兵临城下，谢太后任文天祥出使蒙古被伯颜扣留，谢太后又派贾余庆出使。
-#### 德祐二年
+### 德祐二年
 > 派遣监察御史刘祒奉表称臣，元朝使者进入临安府
 > 宋恭帝赵在临安皇城里举行了受降仪式，宣布正式退位。元伯颜进入临安
 
-### 端宗 裕文昭武愍孝皇帝 赵昰[shì] 1276年—1278年
-#### 景炎元年 1276
+## 端宗 裕文昭武愍孝皇帝 赵昰[shì] 1276年—1278年
+### 景炎元年 1276
 > 文天祥、陆秀夫拥立赵昰为天下兵马都元帅，图谋再度中兴。辗转到福州称帝
 > 宋朝步步退让。扬州沦陷，真州、通州相继失守。宋朝一步步往南逃亡
-#### 景炎二年
+### 景炎二年
 > 宋端宗逃至秀山，落水染病。元将刘深率兵来攻，张世杰迎战不敌
-#### 景炎三年
+### 景炎三年
 > 九岁的宋端宗在碙洲荒岛上病死
 
-### 末帝 赵昺 1278年—1279年
-#### 祥兴元年 1278
+## 末帝 赵昺 1278年—1279年
+### 祥兴元年 1278
 > 宋端宗病死，赵昺被陆秀夫、张世杰拥立为帝，迁到崖山
 > 文天祥在五坡岭被元军统帅张弘范的弟弟张弘正所俘，其统领的督军府从此瓦解。
-#### 祥兴二年
+### 祥兴二年
 > 元将张弘范直趋崖山，阻断宋军的水源，张弘范派人劝降，被张世杰拒绝
 > 张弘范发动猛攻。陆秀夫背起赵昺奋身跃入大海，以身殉国。
 > 张世杰堕身入海，为国为民族尽忠殉国。 南宋宣告灭亡
@@ -495,7 +493,7 @@ description: 少数民族入侵中原，民族大融和的重要时期。
 >  部分资料来自网络，如侵犯您的权益，请联系我删除！
 
 
-纲鉴易知录卷六四
+```
 
 
 宋纪
@@ -11021,3 +11019,4 @@ description: 少数民族入侵中原，民族大融和的重要时期。
 目　厓山之破，张弘范等置酒大会，谓天祥曰：“国亡，丞相忠孝尽矣。能改心以事之宋者事今，将不失为宰相也。”天祥泫然出涕曰：“国亡不能救，为人臣者死有余罪，况敢逃其死而贰其心乎！”弘范义之，遣使护送天祥赴燕。道经吉州，痛恨不食，八日犹生，乃复食。十月，至燕，馆人供张甚盛，天祥不寝处，坐达旦；遂移兵马司，设卒守之。既而丞相博罗等召见于枢密院，欲使拜，天祥长揖不屈。博罗曰：“自古有以宗庙土地与人而复逃者乎？”天祥曰：“奉国与人，是卖国之臣也。卖国者有所利而为之，必不去，去者必非卖国者也。予前除宰相不拜，奉使军前，寻被拘执。已而有贼臣献国，国亡当死，所以不死者，以度宗二子在浙东，老母在广故耳。”博罗曰：“弃德祐嗣君而立二王，忠乎？”天祥曰：“当此之时，社稷为重，君为轻。吾别立君，为宗庙、社稷计也。从怀、愍而北者非忠，从元帝为忠；从徽、钦而北者非忠，从高宗为忠。”博罗语塞，忽曰：“晋元帝、宋高宗，皆有所受命，二王不以正，是篡也。”天祥曰：“景炎乃度宗长子，德祐亲兄，不可谓不正；登极于德祐去位之后，不可谓篡；陈丞相以太后命奉二王出宫，不可谓无所受命。”博罗等皆无辞，但以“无受命”为解。天祥曰：“天与之，人归之，虽无传受之命，推戴拥立，亦何不可！”博罗怒曰：“尔立二王，竟成何功？”天祥曰：“立君以存宗社，存一日，则尽臣子一日之责，何功之有！”曰：“既知其不可，何必为？”天祥曰：“父母有疾，虽不可为，无不下药之理。尽吾心焉，不可救，则天命也。今日天祥至此，有死而已，何必多言。”博罗欲杀之，而元主及大臣不可。弘范病中亦表奏天祥忠于所事，愿释勿杀，乃囚之。
 
 右南宋九帝，共一百五十三年。合两宋一十八帝，共三百二十年。
+```
