--- a/_posts/2022-03-03-中华简史_明.md
+++ b/_posts/2022-03-03-中华简史_明.md
@@ -5,13 +5,12 @@ date: 2022-12-26 09:52:00
 description: 太祖朱元璋创立大明王朝。
 ---
 
-## 中华简史-明朝卷
-### 概述
+## 概述
 ```
 
 ```
 
-### 太祖 开天行道肇纪立极大圣至神仁文义武俊德成功高皇帝  朱元璋(1328-1398) 
+## 太祖 开天行道肇纪立极大圣至神仁文义武俊德成功高皇帝  朱元璋(1328-1398) 
 ```
 1328年 （元天历元年） 太祖朱元璋出生
 1352年 （元至正十二年） 太祖朱元璋起义
@@ -20,158 +19,158 @@ description: 太祖朱元璋创立大明王朝。
 1368年 （元至正二十八年） 太祖朱元璋在南京登基，建国大明，年号洪武
 ```
 
-#### 洪武元年 1368
+### 洪武元年 1368
 > 明朝开始修建明长城
-#### 洪武二年
+### 洪武二年
 > 倭寇侵略山东沿岸，倭寇之忧从此而起
 > 大将常遇春在北伐时暴病而亡，享年39岁
-#### 洪武三年
+### 洪武三年
 > 定科举法
 > 《水浒传》作者施耐庵逝世，享年74岁
-#### 洪武四年
-#### 洪武五年
-#### 洪武六年
+### 洪武四年
+### 洪武五年
+### 洪武六年
 > 颁布《大明律》
-#### 洪武十年
+### 洪武十年
 > 惠帝朱允炆出生
-#### 洪武十一年
+### 洪武十一年
 > 仁宗朱高炽出生
-#### 洪武十三年
+### 洪武十三年
 > 胡惟庸入狱，同年处死，至此废止丞相制
-#### 洪武十四年
+### 洪武十四年
 > 徐达修筑山海关
 > 行里甲制
 > 宋濂逝世，享年71岁
-#### 洪武十五年
+### 洪武十五年
 > 皇后马秀英逝世，享年51岁
-#### 洪武十七年
+### 洪武十七年
 > 再定科举取士制
-#### 洪武十八年
+### 洪武十八年
 > 画家王蒙逝世，享年77岁
 > 开国大将徐达逝世，享年53岁
-#### 洪武二十年
+### 洪武二十年
 > 《鱼鳞图册》问世
-#### 洪武二十五年
+### 洪武二十五年
 > 太子朱标逝世，享年37岁
-#### 洪武三十一年
+### 洪武三十一年
 > 于谦出生
 > 太祖朱元璋逝世，享年70岁。其次孙朱允炆继位，改元建文
-### 惠宗 恭闵惠皇帝 （清高宗追谥） 朱允炆（1377-1402） 
-#### 建文元年 （洪武三十二年）1399
+## 惠宗 恭闵惠皇帝 （清高宗追谥） 朱允炆（1377-1402） 
+### 建文元年 （洪武三十二年）1399
 > 敕修《太祖实录》
 > 宣宗朱瞻基出生
 > 成祖朱棣起兵发动“靖难之役”
-#### 建文二年
+### 建文二年
 > 白沟河大战爆发
 > 《三国演义》作者罗贯中逝世，享年约70岁
-#### 建文三年
+### 建文三年
 > 夹河之战爆发
-#### 建文四年
+### 建文四年
 > 成祖朱棣攻陷南京，惠帝朱允炆下落不明。
 > 方孝孺被成祖朱棣杀，享年45岁。被灭十族，死难者共计873人
 > 成祖朱棣重修《太祖实录》
-### 太宗 （初上庙号）成祖  （明世宗改上庙号） 启天弘道高明肇运圣武神功纯仁至孝文皇帝 朱棣（1360年-1424年）
-#### 永乐元年 1403
+## 太宗 （初上庙号）成祖  （明世宗改上庙号） 启天弘道高明肇运圣武神功纯仁至孝文皇帝 朱棣（1360年-1424年）
+### 永乐元年 1403
 > 诏以北平为北京，改北平府为顺天府。
 > 建立建州卫
-#### 永乐三年
+### 永乐三年
 > 郑和开始出使西洋，前后历经29年，总共七次
-#### 永乐四年
+### 永乐四年
 > 设立云南宣抚使司
-#### 永乐五年
+### 永乐五年
 > 《永乐大典》问世
 > 皇后徐氏逝世，享年45岁
-#### 永乐七年
+### 永乐七年
 > 在东北女真部设立奴儿干都司
 > 成祖朱棣在北京天寿山修造帝陵
-#### 永乐八年
+### 永乐八年
 > 成祖朱棣第一次北伐蒙古
-#### 永乐九年
+### 永乐九年
 > 再修《太祖实录》
-#### 永乐十年
+### 永乐十年
 > 设立囊哈儿卫
 > 设立建州左卫　
-#### 永乐十一年
+### 永乐十一年
 > 设立贵州布政使司
-#### 永乐十二年
+### 永乐十二年
 > 成祖朱棣亲征瓦剌
 > 诏修曲阜孔子庙　　
-#### 永乐十四年　　
+### 永乐十四年　　
 > 成祖朱棣开工修建北京紫禁城
-#### 永乐十八年
+### 永乐十八年
 > 在北京设立东厂
-#### 永乐十九年
+### 永乐十九年
 > 成祖朱棣迁都北京
-#### 永乐二十二年
+### 永乐二十二年
 > 成祖朱棣逝世，享年64岁。其长子朱高炽继位，改元洪熙
-### 仁宗 敬天体道纯诚至德弘文钦武章圣达孝昭皇帝 朱高炽 （1378年-1425年）
-#### 洪熙元年 1425
+## 仁宗 敬天体道纯诚至德弘文钦武章圣达孝昭皇帝 朱高炽 （1378年-1425年）
+### 洪熙元年 1425
 > 诏修《太宗实录》　
 > 仁宗朱高炽暴逝，享年48岁。其长子朱瞻基继位，改元宣德
 > 敕修《仁宗实录》　
-### 宣宗 宪天崇道英明神圣钦天昭武宽仁纯孝章皇帝 朱瞻基（1398年-1435年）
-#### 宣德元年 1426
+## 宣宗 宪天崇道英明神圣钦天昭武宽仁纯孝章皇帝 朱瞻基（1398年-1435年）
+### 宣德元年 1426
 > 汉王朱高煦造反，宣宗朱瞻基亲征，擒汉王于乐安城，后杀朱高煦，享年41岁
-#### 宣德二年
+### 宣德二年
 > 英宗朱祁镇出生
-#### 宣德三年
+### 宣德三年
 > 景帝朱祁钰出生
-#### 宣德六年 
+### 宣德六年 
 > 明朝与安南议和
-#### 宣德十年 
+### 宣德十年 
 > 郑和逝世，享年64岁
 > 宣宗朱瞻基逝世，享年36岁。其长子朱祁镇继位，改元正统
-### 英宗 法天立道仁明诚敬昭文宪武至德广孝睿皇帝 朱祁镇(1427年-1464年）
-#### 正统元年 1436
-#### 正统五年
-#### 正统七年
+## 英宗 法天立道仁明诚敬昭文宪武至德广孝睿皇帝 朱祁镇(1427年-1464年）
+### 正统元年 1436
+### 正统五年
+### 正统七年
 > 宦官王振掌权
-#### 正统九年
-#### 正统十一年
-#### 正统十二年
+### 正统九年
+### 正统十一年
+### 正统十二年
 > 宪宗朱见深出生
-#### 正统十四年
+### 正统十四年
 > 蒙古瓦剌部南犯，英宗朱祁镇亲征，后在土木堡被瓦剌部俘虏，史称土木堡之变
 > 王振在土木堡被明将樊忠所杀
 > 朱祁镇之弟、郕王朱祁钰在北京登基，改元景泰
 > 瓦剌部进攻北京，北京保卫战打响
-### 代宗 符天建道恭仁康定隆文布武显德崇孝景皇帝 朱祁钰（1428年-1457年）
-#### 景泰元年 1450
+## 代宗 符天建道恭仁康定隆文布武显德崇孝景皇帝 朱祁钰（1428年-1457年）
+### 景泰元年 1450
 > 瓦剌部释放英宗朱祁镇回京，后被景帝朱祁钰囚禁在西苑
-#### 景泰三年
+### 景泰三年
 > 景帝朱祁钰废朱祁镇之子朱见深太子位，立自己的儿子朱见济为太子
-#### 景泰四年
+### 景泰四年
 > 太子朱见济逝世
-#### 景泰八年
+### 景泰八年
 > 英宗朱祁镇复辟，夺回帝位，改年号景泰为天顺
-### 英宗 法天立道仁明诚敬昭文宪武至德广孝睿皇帝 朱祁镇（复辟）（1427年-1464年）
-#### 天顺 1457年-1464年
+## 英宗 法天立道仁明诚敬昭文宪武至德广孝睿皇帝 朱祁镇（复辟）（1427年-1464年）
+### 天顺 1457年-1464年
 > 景帝朱祁钰逝世，享年29岁
 > 于谦被英宗朱祁镇斩杀于崇文门外，享年59岁
 > 英宗朱祁镇逝世，享年37岁。其长子朱见深继位，改元成化
 > 自明朝开国以来的殉葬制度宣告终结
-### 宪宗 继天凝道诚明仁敬崇文肃武宏德圣孝纯皇帝 朱见深（1447年-1487年）
-#### 成化元年 1465
+## 宪宗 继天凝道诚明仁敬崇文肃武宏德圣孝纯皇帝 朱见深（1447年-1487年）
+### 成化元年 1465
 > 宪宗朱见深为于谦平反
-#### 成化六年
+### 成化六年
 > 孝宗朱祐樘出生
-#### 成化八年
+### 成化八年
 > 王守仁出生
-#### 成化十一年
+### 成化十一年
 > 三子朱祐樘被立为皇太子
-#### 成化十二年
+### 成化十二年
 > 四川播州苗民起义　
-#### 成化十三年
+### 成化十三年
 > 设立西厂
-#### 成化十六年
+### 成化十六年
 > 严嵩出生
-#### 成化二十三年
+### 成化二十三年
 > 万贵妃暴死，享年57岁
 > 宪宗朱见深逝世，享年40岁。其三子朱祐樘继位，改元弘治
-### 孝宗 建天明道诚纯中正圣文神武至仁大德敬皇帝 朱祐樘（1470年-1505年）
-#### 弘治元年 1488
+## 孝宗 建天明道诚纯中正圣文神武至仁大德敬皇帝 朱祐樘（1470年-1505年）
+### 弘治元年 1488
 > 蒙古鞑靼部小王子向明朝进贡
-#### 弘治四年
+### 弘治四年
 
 
 
@@ -518,257 +517,257 @@ description: 太祖朱元璋创立大明王朝。
 
 编　大封功臣。
 
-#### 弘治十年
+### 弘治十年
 > 诏修《大明会典》
-#### 弘治十八年
+### 弘治十八年
 > 孝宗朱祐樘逝世，享年35岁。其长子朱厚燳继位，改元正德
 > 蒙古鞑靼部小王子侵犯宣府
 > 武宗朱厚燳敕修《孝宗实录》
-### 武宗 承天达道英肃睿哲昭德显功弘文思孝毅皇帝 朱厚照 （1491年-1521年）
-#### 正德元年 1506
+## 武宗 承天达道英肃睿哲昭德显功弘文思孝毅皇帝 朱厚照 （1491年-1521年）
+### 正德元年 1506
 > 王守仁被贬至贵州
-#### 正德二年
+### 正德二年
 > 《历代通鉴纂要》编成
 > 建豹房新宅　
 > 世宗朱厚熜出生　
-#### 正德三年
+### 正德三年
 > 焦芳变科举授官之制
 > 设立内行厂
-#### 正德四年
+### 正德四年
 > 《孝宗实录》修成　　
-#### 正德五年
+### 正德五年
 > 宦官刘瑾下狱，后被凌迟。连割三天，共割3357刀
 > 吴承恩出生
-#### 正德六年
+### 正德六年
 1511年 正德六年，南方各地发生农民起义。
-#### 正德九年
-#### 正德十一年
-#### 正德十二年
+### 正德九年
+### 正德十一年
+### 正德十二年
 > 应州之战爆发。武宗朱厚燳亲征，大败蒙古鞑靼部小王子。
-#### 正德十三年
-#### 正德十六年
+### 正德十三年
+### 正德十六年
 > 武宗朱厚燳逝世，享年30岁。武宗无子嗣，其堂弟兴献王朱厚熜继位，改元嘉靖。
-### 世宗 钦天履道英毅神圣宣文广武洪仁大孝肃皇帝 朱厚熜（1507年-1566年）
-#### 嘉靖元年 1522
+## 世宗 钦天履道英毅神圣宣文广武洪仁大孝肃皇帝 朱厚熜（1507年-1566年）
+### 嘉靖元年 1522
 > 世宗朱厚熜命加生父母皇号　
-#### 嘉靖二年
-#### 嘉靖三年
+### 嘉靖二年
+### 嘉靖三年
 > 大礼议事件爆发
-#### 嘉靖四年
+### 嘉靖四年
 > 张居正出生
-#### 嘉靖五年
-#### 嘉靖七年
+### 嘉靖五年
+### 嘉靖七年
 > 世宗朱厚熜为其父其母上谥号，诏告天下
 > 重新修订《大明会典》
-#### 嘉靖八年
-#### 嘉靖十六年
+### 嘉靖八年
+### 嘉靖十六年
 > 穆宗朱载垕出生
-#### 嘉靖十七年
+### 嘉靖十七年
 > 世宗朱厚熜将自己的父亲朱佑杬的庙号定为睿宗，并入太庙
-#### 嘉靖十九年
+### 嘉靖十九年
 > 蒙古俺达进犯
-#### 嘉靖二十一年
+### 嘉靖二十一年
 > 蒙古俺达再次进犯
 > 壬寅宫变发生
-#### 嘉靖二十四年
+### 嘉靖二十四年
 > 吐鲁番向明朝进贡
 > 设岷州，隶陕西巩昌府
-#### 嘉靖二十五年
+### 嘉靖二十五年
 > 修筑大同长城
-#### 嘉靖二十八年
+### 嘉靖二十八年
 > 俺答大举入侵大同，直抵怀来
-#### 嘉靖二十九年
+### 嘉靖二十九年
 > 庚戌之变
-#### 嘉靖三十二年
+### 嘉靖三十二年
 > 王直勾结倭寇大举入犯东南沿海　　
 > 葡萄牙人占领澳门
-#### 嘉靖三十三年
+### 嘉靖三十三年
 > 倭寇大肆流劫东南沿海　
-#### 嘉靖三十四年
+### 嘉靖三十四年
 > 陕西、山西发生特大地震　　
-#### 嘉靖三十八年
+### 嘉靖三十八年
 > 辽东大灾
 > 清太祖爱新觉罗.努尔哈赤出生
-#### 嘉靖三十九年
+### 嘉靖三十九年
 > 戚继光编练“戚家军”
-#### 嘉靖四十一年
+### 嘉靖四十一年
 > 重录《永乐大典》
 > 严嵩遭罢免
-#### 嘉靖四十二年
+### 嘉靖四十二年
 > 戚继光兴化大捷
 > 神宗朱翊钧出生
-#### 嘉靖四十四年
+### 嘉靖四十四年
 > 明朝颁布《宗藩条例》
 > 胡宗宪下狱处死
-#### 嘉靖四十五年
+### 嘉靖四十五年
 > 世宗朱厚熜逝世，享年59岁。其三子朱载垕继位，改元隆庆
-### 穆宗 契天隆道渊懿宽仁显文光武纯德弘孝庄皇帝 朱载坖（1537年-1572年）
-#### 隆庆元年 1567
+## 穆宗 契天隆道渊懿宽仁显文光武纯德弘孝庄皇帝 朱载坖（1537年-1572年）
+### 隆庆元年 1567
 > 纂修《世宗实录》
 > 解除海禁
 > 俺达屠石州，共杀五万余人
 > 纂修《世宗实录》
-#### 隆庆二年
-#### 隆庆三年
+### 隆庆二年
+### 隆庆三年
 > 俺答进犯大同右卫
 > 戚继光奏陈边务
-#### 隆庆四年
+### 隆庆四年
 > 俺答孙把汉那吉来降　　　　
 > 俺答请封贡通市
-#### 隆庆五年
+### 隆庆五年
 > 俺答上表称贡
-#### 隆庆六年
+### 隆庆六年
 > 穆宗朱载垕逝世，享年35岁。其三子朱翊钧冲龄继位，改元万历
 > 诏修《穆宗实录》　
-### 神宗 范天合道哲肃敦简光文章武安仁止孝显皇帝 朱翊钧（1563年-1620年）
-#### 万历元年 1573
+## 神宗 范天合道哲肃敦简光文章武安仁止孝显皇帝 朱翊钧（1563年-1620年）
+### 万历元年 1573
 > 张居正改革
-#### 万历二年
+### 万历二年
 > 李成梁大败王杲
 > 倭寇侵犯浙江、广东　
-#### 万历三年
-#### 万历四年
+### 万历三年
+### 万历四年
 > 再修《大明会典》
 > 毛文龙出生
-#### 万历五年
+### 万历五年
 > 张居正清丈土地
-#### 万历六年
+### 万历六年
 > 李时珍编成《本草纲目》
-#### 万历九年
+### 万历九年
 > 《万历会计录》编成　
-#### 万历十年
+### 万历十年
 > 杭州接连发生兵变、民变事件
 > 张居正逝世，享年57岁
 > 吴承恩逝世，享年约81岁
 > 光宗朱常洛出生
-#### 万历十一年
+### 万历十一年
 1583年 万历十一年，李成梁平古勒寨，后屠城。
 1583年 万历十一年，清太祖爱新觉罗.努尔哈赤崛起
-#### 万历十二年
+### 万历十二年
 > 神宗朱翊钧清算张居正
 > 袁崇焕出生
-#### 万历十三年
+### 万历十三年
 > 皇太子之争
-#### 万历十五年
+### 万历十五年
 > 南北旱涝成灾民食草木　
 > 海瑞逝世，享年73岁
 > 徐霞客出生
-#### 万历十七年
+### 万历十七年
 > 广东白莲教起义
-#### 万历二十年
+### 万历二十年
 > 宁夏哱拜起兵反叛，哱拜后自杀。
 > 明军抗倭援朝失败
 > 平壤大捷
 > 清太宗爱新觉罗.皇太极出生
-#### 万历二十一年
+### 万历二十一年
 > 李时珍逝世，享年75岁
 > 洪承畴出生
-#### 万历二十二年
+### 万历二十二年
 > “东林党议”之始
 > 中日和议成约
-#### 万历二十三年
+### 万历二十三年
 > 诏复建文年号
-#### 万历二十六年
+### 万历二十六年
 > 明军南海大捷　　　　　
-#### 万历二十九年
+### 万历二十九年
 > 神宗朱翊钧册立长子朱常洛为皇太子
 > 意大利传教士利玛窦定居北京
 > 史可法出生
-#### 万历三十年
+### 万历三十年
 1602年 万历三十年，绍宗朱聿键出生
-#### 万历三十二年
+### 万历三十二年
 > 福建等省发生大地震
 > 荷兰殖民者侵占澎湖
-#### 万历三十三年
+### 万历三十三年
 > 熹宗朱由校出生
-#### 万历三十四年
+### 万历三十四年
 > 李自成出生
 > 张献忠出生
-#### 万历三十五年
+### 万历三十五年
 > 徐光启译《几何原本》
 > 安宗朱由崧出生
-#### 万历三十六年
+### 万历三十六年
 > 锦州、松山军变
-#### 万历三十七年　
+### 万历三十七年　
 > 日本入侵琉球
-#### 万历三十八年
+### 万历三十八年
 > 齐、楚、浙三党攻击东林党
 > 《金瓶梅》问世
-#### 万历三十九年
+### 万历三十九年
 > 思宗朱由检出生
-#### 万历四十年
+### 万历四十年
 > 兵部请严海禁　
 > 吴三桂出生
 > 清睿亲王、成宗爱新觉罗.多尔衮出生
-#### 万历四十一年
+### 万历四十一年
 > 清孝庄文太后博尔济吉特.布木布泰出生
-#### 万历四十三年
+### 万历四十三年
 > 明宫三案之梃击案发生
 > 清太祖爱新觉罗.努尔哈赤建立八旗制度
-#### 万历四十四年
+### 万历四十四年
 > 清太祖爱新觉罗.努尔哈赤即大汗位，建国大金，年号天命
-#### 万历四十五年
+### 万历四十五年
 > 各地呈报灾情，南北大旱
-#### 万历四十六年
+### 万历四十六年
 > 后金军攻陷抚顺，李永芳降金
 > 后金军攻陷清河
 > 开海运通饷辽东
-#### 万历四十七年　
+### 万历四十七年　
 > 萨尔浒大战爆发，明军大败
 > 清太祖爱新觉罗.努尔哈赤攻陷开原
 > 熊廷弼经略辽东　　
 > 明朝第三次加征田赋　　
-#### 万历四十八年
+### 万历四十八年
 > ，神宗朱翊钧逝世，享年57岁。其长子朱常洛继位，改元泰昌
 > ，明宫三案之红丸案发生
 > ，光宗朱常洛逝世，享年38岁。其长子朱由校继位，改元天启
 > ，明宫三案之移宫案发生
 > ，定八月后为泰昌元年
-### 光宗 崇天契道英睿恭纯宪文景武渊仁懿孝贞皇帝 朱常洛（1582年-1620年）
-#### 泰昌元年 1620年
+## 光宗 崇天契道英睿恭纯宪文景武渊仁懿孝贞皇帝 朱常洛（1582年-1620年）
+### 泰昌元年 1620年
 > 袁应泰出任辽东经略　
-### 熹宗 达天禅道敦孝笃友章文襄武靖穆庄勤悊皇帝 朱由校（1605年-1627年）
-#### 天启元年 1621
+## 熹宗 达天禅道敦孝笃友章文襄武靖穆庄勤悊皇帝 朱由校（1605年-1627年）
+### 天启元年 1621
 > 后金军攻陷沈阳
 > 后金军攻陷辽阳
 > 诏修《神宗实录》
 > 袁应泰自杀
 > 毛文龙入驻皮岛
 > 明廷复用熊廷弼
-#### 天启二年
+### 天启二年
 1622年 天启二年，广宁之败
-#### 天启三年
+### 天启三年
 1623年 天启三年，昭宗朱由榔出生
-#### 天启四年
+### 天启四年
 > 魏忠贤提督东厂
 > 魏忠贤与客氏杀后妃
 > 孙承宗奏陈边方大计　　　
 > 左光斗削籍
 > 郑成功出生
-#### 天启五年
+### 天启五年
 > 后金军攻取旅顺
 > 各地发生大饥荒
 > 熊廷弼被斩首，传首九边，享年52岁
 > 孙承宗受阉党排挤，罢官归乡
-#### 天启六年
+### 天启六年
 > 宁远大战爆发，明军大败后金军。
 > 纂修《三朝要典》
 > 清太祖爱新觉罗.努尔哈赤逝世，享年67岁。其八子爱新觉罗.皇太极继位，改元天聪
 > 冯铨免官　
-#### 天启七年
+### 天启七年
 > 宁锦大战爆发，明军大败后金军
 > 陕西澄城县爆发民变，知县张斗耀被杀
 > 袁崇焕与后金议和
 > 熹宗朱由校逝世，享年22岁。熹宗无子嗣，其弟信王朱由检继位，改元崇祯
 > 思宗朱由检清算魏忠贤等人
 > 魏忠贤等人畏罪自杀
-### 思宗  怀宗（清世祖去庙号）庄烈愍皇帝 （清世祖谥）朱由检（1611年-1644年）
-#### 崇祯元年 1628
+## 思宗  怀宗（清世祖去庙号）庄烈愍皇帝 （清世祖谥）朱由检（1611年-1644年）
+### 崇祯元年 1628
 > 宁远兵变　　
 > 各地农民起义相继爆发
 > 毁《三朝要典》　
 > 诏修《熹宗实录》
-#### 崇祯二年
+### 崇祯二年
 > 陕西等地大饥
 > 李自成参加起义
 > 议改历法，西历自此开始实行　
@@ -777,61 +776,61 @@ description: 太祖朱元璋创立大明王朝。
 > 清太宗爱新觉罗.皇太极率领后金军入关侵犯，京师戒严
 > 满桂战死
 > 袁崇焕下狱
-#### 崇祯三年
+### 崇祯三年
 > 明廷行保甲制度
 > 孙承宗收复京东四城
 > 袁崇焕被凌迟于北京西市，享年46岁
-#### 崇祯四年
+### 崇祯四年
 > 后金制造红衣大炮
 > 后金兵围大凌城
-#### 崇祯五年
+### 崇祯五年
 > 孔有德攻陷登州城　
-#### 崇祯六年
+### 崇祯六年
 > 徐光启逝世，享年71岁
 > 孔有德降后金
 > 尚可喜降后金
-#### 崇祯七年
+### 崇祯七年
 > 农民军入河南　
 > 林丹汗逝世
-#### 崇祯八年
+### 崇祯八年
 > 农民军荥阳大会
 > 清太宗爱新觉罗.皇太极改族名为满洲族
-#### 崇祯九年
+### 崇祯九年
 > 滁州之战　　
 > 清太宗爱新觉罗.皇太极称帝，建国大清，改元崇德
 > 思宗朱由检诏令天下
 > 清兵从喜峰口入关，侵犯中原，京师戒严
 > 闯王高迎祥被杀
-#### 崇祯十年
+### 崇祯十年
 > 朝鲜降清
 > 清军攻克皮岛
 > 洪承畴、孙传庭大败李自成于商洛
 > 宋应星著成《天工开物》
-#### 崇祯十一年
+### 崇祯十一年
 > 清军再次骚扰中原，京师戒严
 > 《皇明经世文编》纂成　
 > 卢象升战败自杀，享年38岁
 > 清世祖爱新觉罗.福临出生
 > 张献忠、罗汝才先后归抚明廷
-#### 崇祯十二年
+### 崇祯十二年
 > 清军侵犯济南
 > 明清松锦大战爆发
 > 张献忠、罗汝才先后重新起义
-#### 崇祯十四年
+### 崇祯十四年
 > 杨嗣昌自杀，享年53岁
 > 徐霞客逝世，享年54岁
 > 李自成攻陷洛阳，生烹福王朱常洵
-#### 崇祯十五年
+### 崇祯十五年
 > 松锦大战结束，明军惨败，总督洪承畴、锦州总兵祖大寿、东协总兵曹变蛟、前屯卫总兵王廷臣、辽东巡抚邱民仰被俘
 > 洪承畴、祖大寿降清；曹变蛟、王廷臣、邱民仰誓死不降，后被清廷所杀
 > 清军再次入塞骚扰中原
 > 《徐霞客游记》纂成　
-#### 崇祯十六年
+### 崇祯十六年
 1643年 崇祯十六年，李自成建立地方政权
 1643年 崇祯十六年，李自成克潼关，孙传庭战死
 1643年 崇祯十六年，郑经出生
 1643年 崇祯十六年，清太宗爱新觉罗.皇太极逝世，享年51岁。其九子爱新觉罗.福临继位，改元顺治。睿亲王爱新觉罗.多尔衮与郑亲王爱新觉罗.济尔哈朗左右辅政
-#### 崇祯十七年
+### 崇祯十七年
 > 正月，李自成在西安称帝，建国大顺，年号永昌
 > 二月，大顺农民军攻陷宁武关，总兵周遇吉身亡。大同总兵姜瓖随之投降，大同沦陷
 > 三月十五日，居庸关监军太监杜之秩、总兵唐通投降，居庸关沦陷
@@ -849,7 +848,7 @@ description: 太祖朱元璋创立大明王朝。
 >  部分资料来自网络，如侵犯您的权益，请联系我删除！
 
 
-
+```
 元纪
 
 
@@ -8069,3 +8068,4 @@ description: 太祖朱元璋创立大明王朝。
 丁亥，自成出彰义门西走，三桂轻骑追之。贼马骡皆重载，自卢沟至固安百里内，所弃财物、妇女塞路，贼众半散去。三桂追至保定，贼还兵而斗，尽失其辎重。追至真定复拒战，官军击之，杀贼万余人，自成中流矢，拔营走山西。三桂以兵逐之，及关而止，遂还军京师。
 
 编　五月，我大清定鼎顺天。
+```
