--- a/_posts/2022-03-03-中华简史_隋.md
+++ b/_posts/2022-03-03-中华简史_隋.md
@@ -1,103 +1,167 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-隋朝卷
 date: 2022-12-26 09:52:00
 description: 太祖杨坚创业至炀帝广而亡，呜呼哀哉。
 ---
 
-## 中华简史-隋朝卷
-
-### 概述
+## 概述
 ```
-         隋朝（581年－618年）是上承南北朝下启唐朝大一统王朝，因唐朝与隋朝的文化、制度、社会特点一脉相承，故史学家常将两朝合称为隋唐。
-         大定元年（581年）二月，北周静帝禅让帝位于杨坚，即隋文帝，定国号为“隋”，定都大兴城，北周覆亡。隋朝是五胡乱华后汉族在北方重新建立的大一统王朝，结束了自西晋末年以来长达近300年的分裂局面。隋炀帝过度消耗国力，最后引发了隋末民变和贵族叛变。大业十四年（618年）隋恭帝杨侑禅让李渊，619年王世充废隋哀帝，隋朝灭亡，享国38年。
-         为了巩固统治，隋廷在政治、经济、文化及外交等领域进行了大刀阔斧的改革。政治上确立了三省六部制，以巩固中央集权制度；并正式推行科举制，选拔优秀人才，弱化世族垄断仕官的现象；另外还建立政事堂议事制、监察制、考绩制，这些都强化了政府机制，深刻影响后世封建王朝的政治制度。
-         在军事上继续推行和完善府兵制度，经济上一方面实行均田制并改定赋役，减轻农民生产压力，另一方面采取“大索貌阅”和“输籍定样”等清查户口措施，以增加财政收入。这些政策成就了隋初的开皇之治。
-         外交方面，隋朝盛世也使得当时周边国家和境内的少数民族如高昌、倭国、高句丽、新罗、百济与臣服的东突厥等国皆深受隋朝文化与典章制度的影响，外交交流以日本的遣隋使最为著名。
-         隋朝根据南北朝的经验而改革政治，兴建大运河以及驰道改善水陆交通线，同时兴建京都大兴城和东都洛阳。
+隋朝（581年－618年）是上承南北朝下启唐朝大一统王朝，因唐朝与隋朝的文化、制度、社会特点一脉相承，故史学家常将两朝合称为隋唐。
+大定元年（581年）二月，北周静帝禅让帝位于杨坚，即隋文帝，定国号为“隋”，定都大兴城，北周覆亡。隋朝是五胡乱华后汉族在北方重新建立的大一统王朝，结束了自西晋末年以来长达近300年的分裂局面。隋炀帝过度消耗国力，最后引发了隋末民变和贵族叛变。大业十四年（618年）隋恭帝杨侑禅让李渊，619年王世充废隋哀帝，隋朝灭亡，享国38年。
+为了巩固统治，隋廷在政治、经济、文化及外交等领域进行了大刀阔斧的改革。政治上确立了三省六部制，以巩固中央集权制度；并正式推行科举制，选拔优秀人才，弱化世族垄断仕官的现象；另外还建立政事堂议事制、监察制、考绩制，这些都强化了政府机制，深刻影响后世封建王朝的政治制度。
+在军事上继续推行和完善府兵制度，经济上一方面实行均田制并改定赋役，减轻农民生产压力，另一方面采取“大索貌阅”和“输籍定样”等清查户口措施，以增加财政收入。这些政策成就了隋初的开皇之治。
+外交方面，隋朝盛世也使得当时周边国家和境内的少数民族如高昌、倭国、高句丽、新罗、百济与臣服的东突厥等国皆深受隋朝文化与典章制度的影响，外交交流以日本的遣隋使最为著名。
+隋朝根据南北朝的经验而改革政治，兴建大运河以及驰道改善水陆交通线，同时兴建京都大兴城和东都洛阳。
 ```
 
+## 高祖  文皇帝 杨坚 581-604
 
-### 高祖  文皇帝 杨坚 581-604
-#### 开皇元年 581
+### 开皇元年 581
+
 > 二月，杨坚称帝，是为隋文帝杨坚，国号隋，建都长安
-> 铸五铢钱，统一钱币。颁行《开皇律》
-#### 开皇二年
-> 于长安故城东南营建新都大兴城。颁均田及租调新令
-#### 开皇三年
-> 迁都大兴城
-> 隋军败突厥，突厥分裂为东、西两部
-> 废郡，行州县二级制
-#### 开皇四年
-> 凿广通渠
-#### 开皇五年
-> 诏诸州置社仓
-> 东突厥沙钵略可汗称臣于隋，南迁入塞
-#### 开皇八年
-> 十一月，以晋王广为统帅，伐陈
-#### 开皇九年
-> 正月，隋军克建康，俘陈叔宝，陈朝亡
-> 废行台，置并、扬、益、荆四总管府
-#### 开皇十年
-> 诏府兵入州县户籍。令丁男年五十，免役收庸
-#### 开皇十九年
-> 东突厥突利可汗内附，隋以其为启民可汗，筑大利城处其部落
-#### 开皇二十年
-> 废太子杨勇，改立杨广为太子
-> 日本使者小野妹子抵隋
-#### 仁寿元年 601
-#### 仁寿四年
-> 七月，文帝去世，太子广继位，是为隋炀帝杨广
-> 是岁，除妇人、奴婢、部曲之课
-### 世祖 炀皇帝 杨广 604-618
-#### 大业元年 605
-> 营建东都。开通济渠。疏浚邗沟
-#### 大业二年
-> 迁都洛阳
-#### 大业三年
-> 遣羽骑尉朱宽、海师何蛮使流求
-> 颁《大业律》。改州为郡，改部分台、省、府、寺官名
-> 炀帝北巡至榆林，启民可汗来朝
-#### 大业四年
-> 开永济渠
-#### 大业五年
-> 炀帝亲征吐谷浑，置西海、河源、鄯善、且末四郡。伊吾吐屯设内附，以其地置伊吾郡。高昌王麹伯雅朝见炀帝于张掖
-> 大索貌阅
-> 全国郡一百九十；县一千二百五十五；户八百九十万余，口四千六百余万
-#### 大业七年
-> 炀帝将攻高丽，集百万大军于涿郡，又强征百万民夫运粮械
-> 邹平民王薄起义于长白山。
-> 刘霸道、孙安祖、窦建德、张金称、高士达、翟让、杜伏威等相继起义，隋末农民起义爆发
-#### 大业八年
-> 二月，炀帝渡辽水，一征高丽。七月，战败，撤兵
-#### 大业九年
-> 四月，炀帝二征高丽，围辽东城，不下。
-> 六月，杨玄感起兵反炀帝于黎阳，围逼东都，炀帝被迫撤兵。八月，玄感兵败被杀
-#### 大业十年
-> 炀帝三征高丽。高丽遣使请和，炀帝撤兵
-#### 大业十一年
-> 八月，炀帝北巡，为东突厥始毕可汗围困于雁门。九月，解围，还东都
-#### 大业十二年
-> 炀帝幸江都宫，以越王侗等留守洛阳
-> 李密加入瓦岗军。瓦岗军大败隋将张须陀于荥阳
-#### 大业十三年
-> 翟让推李密为魏公，据洛口。四月，瓦岗军进逼东都，与王世充相持
-> 五月，李渊起事于晋阳，七月，进军关中，十一月，攻占长安，立代王侑为帝
-### 恭皇帝 杨侑 617-618
-#### 义宁元年617
 
-### 唐武德元年
+> 铸五铢钱，统一钱币。颁行《开皇律》
+
+### 开皇二年
+
+> 于长安故城东南营建新都大兴城。颁均田及租调新令
+
+### 开皇三年
+
+> 迁都大兴城
+
+> 隋军败突厥，突厥分裂为东、西两部
+
+> 废郡，行州县二级制
+
+### 开皇四年
+
+> 凿广通渠
+
+### 开皇五年
+
+> 诏诸州置社仓
+
+> 东突厥沙钵略可汗称臣于隋，南迁入塞
+
+### 开皇八年
+
+> 十一月，以晋王广为统帅，伐陈
+
+### 开皇九年
+
+> 正月，隋军克建康，俘陈叔宝，陈朝亡
+
+> 废行台，置并、扬、益、荆四总管府
+
+### 开皇十年
+
+> 诏府兵入州县户籍。令丁男年五十，免役收庸
+
+### 开皇十九年
+
+> 东突厥突利可汗内附，隋以其为启民可汗，筑大利城处其部落
+
+### 开皇二十年
+
+> 废太子杨勇，改立杨广为太子
+
+> 日本使者小野妹子抵隋
+
+### 仁寿元年 601
+
+### 仁寿四年
+
+> 七月，文帝去世，太子广继位，是为隋炀帝杨广
+
+> 是岁，除妇人、奴婢、部曲之课
+
+## 世祖 炀皇帝 杨广 604-618
+
+### 大业元年 605
+
+> 营建东都。开通济渠。疏浚邗沟
+
+### 大业二年
+
+> 迁都洛阳
+
+### 大业三年
+
+> 遣羽骑尉朱宽、海师何蛮使流求
+
+> 颁《大业律》。改州为郡，改部分台、省、府、寺官名
+
+> 炀帝北巡至榆林，启民可汗来朝
+
+### 大业四年
+
+> 开永济渠
+
+### 大业五年
+
+> 炀帝亲征吐谷浑，置西海、河源、鄯善、且末四郡。伊吾吐屯设内附，以其地置伊吾郡。高昌王麹伯雅朝见炀帝于张掖
+
+> 大索貌阅
+
+> 全国郡一百九十；县一千二百五十五；户八百九十万余，口四千六百余万
+
+### 大业七年
+
+> 炀帝将攻高丽，集百万大军于涿郡，又强征百万民夫运粮械
+
+> 邹平民王薄起义于长白山。
+
+> 刘霸道、孙安祖、窦建德、张金称、高士达、翟让、杜伏威等相继起义，隋末农民起义爆发
+
+### 大业八年
+
+> 二月，炀帝渡辽水，一征高丽。七月，战败，撤兵
+
+### 大业九年
+
+> 四月，炀帝二征高丽，围辽东城，不下。
+
+> 六月，杨玄感起兵反炀帝于黎阳，围逼东都，炀帝被迫撤兵。八月，玄感兵败被杀
+
+### 大业十年
+
+> 炀帝三征高丽。高丽遣使请和，炀帝撤兵
+
+### 大业十一年
+
+> 八月，炀帝北巡，为东突厥始毕可汗围困于雁门。九月，解围，还东都
+
+### 大业十二年
+
+> 炀帝幸江都宫，以越王侗等留守洛阳
+
+> 李密加入瓦岗军。瓦岗军大败隋将张须陀于荥阳
+
+### 大业十三年
+
+> 翟让推李密为魏公，据洛口。四月，瓦岗军进逼东都，与王世充相持
+
+> 五月，李渊起事于晋阳，七月，进军关中，十一月，攻占长安，立代王侑为帝
+
+## 恭皇帝 杨侑 617-618
+
+### 义宁元年617
+
+## 唐武德元年
+
 > 三月，江都兵变，推宇文化及为首，杀炀帝，立秦王浩为帝，引众西返关中
+
 > 五月，李渊废隋恭帝侑，称帝，国号唐，是为唐高祖李渊。隋朝亡。
+
 > 东都群臣立越王侗，改元皇泰，史称皇泰主。
+
 > 九月，李密为王世充所败，降唐。宇文化及杀杨浩，称帝于魏县，国号许。
+
 > 十一月，窦建德定都乐寿，国号夏
 
-
->  部分资料来自网络，如侵犯您的权益，请联系我删除！
-纲鉴易知录卷四一
-
-
+```
 隋纪
 
 
@@ -507,3 +571,4 @@ description: 太祖杨坚创业至炀帝广而亡，呜呼哀哉。
 纲　冬，定杨将宋金刚取浍州，唐遣秦王世民击之。
 
 纲　十一月，唐秦王世民击宋金刚，屯柏壁。
+```
