--- a/_posts/2022-03-03-中华简史_元.md
+++ b/_posts/2022-03-03-中华简史_元.md
@@ -5,9 +5,7 @@ date: 2022-12-26 09:52:00
 description: 铁木真统一蒙古，蒙古人入主中原。
 ---
 
-## 中华简史-元朝卷
-
-### 概述
+## 概述
 ```
 至正二十八年(公元1368年)八月，明军攻陷大都，元顺帝北逃，元亡。以后，在漠北的元君臣仍沿用元朝国号，史称北元。
 元朝是中国历史上蒙古族统治者建立的统一王朝，建都大都(今北京)，其创建者为元世祖忽必烈。
@@ -32,328 +30,327 @@ description: 铁木真统一蒙古，蒙古人入主中原。
 元朝废除尚书省和门下省，保留中书省与枢密院、御史台分掌政、军、监察三权，地方实行行省制度，开中国行省制度之先河。元代也推行了不少弊政，如诸色户计、投下制、驱口制、匠籍制、籍没制、人殉、宵禁[、海禁等，中断了唐宋变革的进程，深刻地重塑了宋后中国的历史。元朝商品经济和海外贸易较繁荣，但整体生产力不如宋朝，在文化方面，期间出现了元曲和散曲等文化形式。
 
 ```
-### 世祖之前
-#### 1206年 宋开禧二年，金泰和六年，西夏应天元年
+## 世祖之前
+### 1206年 宋开禧二年，金泰和六年，西夏应天元年
 > 五月，宋军分路攻金，大多失败。十月，金军大举攻宋
 > 西夏镇夷郡王安全(襄宗)废桓宗纯祐自立。金册安全为夏国王
 > 蒙古国建立，铁木真称成吉思汗
-#### 1207年　 宋开禧三年，金泰和七年，西夏应天二年
+### 1207年　 宋开禧三年，金泰和七年，西夏应天二年
 > 宋吴曦据四川叛变，被杀
 > 宋金开始议和
 > 蒙古成吉思汗攻西夏，破斡罗孩城
 > 蒙古遣使招降吉利吉思等部
-#### 1208年　 宋嘉定元年，金泰和八年
+### 1208年　 宋嘉定元年，金泰和八年
 > 宋金重订和约，宋以韩侂胄之首换取失地
 > 宋史弥远开始专权
-#### 1209年　 西夏应天四年
+### 1209年　 西夏应天四年
 > 成吉思汗攻西夏，围中兴府；西夏襄宗纳女请和
 > 畏兀儿亦都护归附蒙古
-#### 1211年　 金大安三年，西夏光定元年
+### 1211年　 金大安三年，西夏光定元年
 > 成吉思汗攻金
 > 红袄军首领杨安儿复起义于山东
 > 西夏大都督府主遵顼废襄宗自立，是为西夏神宗
 > 哈剌鲁阿力麻里归附蒙古
-#### 1212年　 金崇庆元年
+### 1212年　 金崇庆元年
 > 山东刘二祖起义
 > 金北边千户契丹人耶律留哥叛金，攻隆安、韩州
-#### 1213年　 金贞祐元年，西夏光定三年
+### 1213年　 金贞祐元年，西夏光定三年
 > 春，耶律留哥自立为辽王
 > 八月，金将纥石烈执中政变，杀卫绍王。九月，金宣宗完颜珣即位
 > 是年，蒙古分三路攻金
 > 西夏军攻金
-#### 1214年　 宋嘉定七年，金贞祐二年
+### 1214年　 宋嘉定七年，金贞祐二年
 > 金宣宗献子女、金帛，向蒙古求和，迁都汴京，史称“宣宗南迁”
 > 宋罢金朝岁币
-#### 1215年　 三年
+### 1215年　 三年
 > 蒙古军取金北京、中都
 > 金宣抚使蒲鲜万奴据辽东称天王，国号大真
-#### 1216年
+### 1216年
 > 成吉思汗还蒙古，遣速不台讨蔑里乞残部
 > 木华黎讨灭锦州张致，取辽东诸郡
-#### 1217年　 宋嘉定十年，金兴定元年，西夏光定七年
+### 1217年　 宋嘉定十年，金兴定元年，西夏光定七年
 > 四月，金军攻宋，双方从此处于长期战争状态
 > 十二月，成吉思汗攻中兴府，西夏神宗留太子守城，走西京
 > 木华黎封太师国王，奉命经略中原，专事攻金
-#### 1218年
+### 1218年
 > 成吉思汗遣术赤征服吉利吉思等部，遣哲别灭屈出律，征服西辽。蒙古军追灭契丹叛人于高丽，高丽向蒙古称臣纳贡
-#### 1219年
+### 1219年
 > 成吉思汗西征花剌子模
 > 木华黎取山西诸路
-#### 1220年　 金兴定四年
+### 1220年　 金兴定四年
 > 九公封建
 > 蒙古军取不花剌、撒麻耳干等城，花剌子模算端摩诃末逃入里海岛上，死
-#### 1221年
+### 1221年
 > 蒙古军取玉龙杰赤及呼罗珊诸城，追击花剌子模算端札阑丁至印度河，札阑丁败逃入印度
-#### 1222年
+### 1222年
 > 木华黎取陕西诸地，围凤翔
-#### 1223年
+### 1223年
 > 哲别、速不台败斡罗思、钦察联军于阿里吉河
-#### 1224年　 宋嘉定十七年
+### 1224年　 宋嘉定十七年
 > 宋宁宗死，史弥远废皇子竑，另立赵昀为帝，是为宋理宗赵昀
-#### 1225年　 宋宝庆元年，金正大二年
+### 1225年　 宋宝庆元年，金正大二年
 > 北方义军将领彭义斌攻蒙古军，战死
 西夏乾定三年
 > 金、西夏议和成，西夏以兄事金
-#### 1226年　 西夏宝义元年
+### 1226年　 西夏宝义元年
 > 蒙古军取西夏西凉府，围中兴府
-#### 1227年　 二年
+### 1227年　 二年
 > 蒙古灭西夏
 > 成吉思汗死于清水县，幼子拖雷监国
-#### 1229年
+### 1229年
 > 窝阔台即蒙古大汗位，颁大札撒，定中原、西域税法，遣搠里蛮攻打札阑丁
-#### 1230年
+### 1230年
 > 蒙古置十路征收课税所，命耶律楚材主其事
 > 窝阔台、拖雷统兵征金
-#### 1231年
+### 1231年
 > 拖雷军入汉中，假道宋境攻金。窝阔台取金河中府
 > 搠里蛮灭札阑丁
 > 蒙古军侵入高丽
-#### 1232年　 金天兴元年
+### 1232年　 金天兴元年
 > 钧州三峰山之战，蒙古拖雷军歼金军，进围汴京。金哀宗逃离汴京
-#### 1233年　 宋绍定六年，金天兴二年
+### 1233年　 宋绍定六年，金天兴二年
 > 正月，金哀宗至归德，金京城西面元帅崔立政变，以汴京降蒙古。六月，哀宗至蔡州。是年，宋应约出兵与蒙古联合灭金，合围蔡州
 > 蒙古军灭东真国
-#### 1234年　 宋端平元年，金天兴三年
+### 1234年　 宋端平元年，金天兴三年
 > 正月，金哀宗让位东面元帅完颜承麟，自缢死。蔡州城破，末帝承麟被杀，金亡
 > 宋出兵复东、西、南三京，被蒙古军击败
 > 蒙古诸王贵族大会
-#### 1235年
+### 1235年
 > 窝阔台命建和林城
 > 遣拔都等诸王西侵斡罗思、钦察诸国，阔端、阔出等攻南宋，唐古侵高丽
 > 蒙古括中原诸路民户
-#### 1236年
+### 1236年
 > 窝阔台以中原民户分赐诸王、贵戚、勋臣，定五户丝制。重新制定中原赋税制度
 > 拔都等灭不里阿耳、钦察诸国。阔端取成都
-#### 1237年
+### 1237年
 > 拔都等攻入斡罗思
-#### 1238年
+### 1238年
 > 蒙古考试中原诸路僧、道、儒生
-#### 1239年
+### 1239年
 > 蒙古征服阿速国
-#### 1240年
+### 1240年
 > 拔都等攻陷乞瓦等城，征服斡罗思诸国
-#### 1241年
+### 1241年
 > 拔都分军侵入马札儿、孛烈儿。蒙古军击溃孛烈儿、捏迷思等军于里格尼茨
 > 窝阔台死，乃马真皇后称制
-#### 1242年　 宋淳祐二年
+### 1242年　 宋淳祐二年
 > 余玠镇守四川，开始全面推行依山筑垒，抵抗蒙古军的方略
-#### 1246年
+### 1246年
 > 贵由即蒙古大汗位
 > 吐蕃萨斯迦派法主萨斯迦班弥怛奉召至凉州，次年见阔端，以乌思藏纳里地归附蒙古
-#### 1248年
+### 1248年
 > 贵由死，斡儿立海迷失皇后称制。拔都召集诸王贵族会议，推举蒙哥为大汗，窝阔台、察合台两系诸王反对
-#### 1251年　 十一年
+### 1251年　 十一年
 > 宋收复襄阳与樊城
 > 蒙哥即大汗位，捕窝阔台孙失烈门等，穷治其党。命忽必烈总领漠南汉地军国重事，统军南征；旭烈兀总领阿母河以西诸地军国重事，统军西征
-#### 1253年
+### 1253年
 > 忽必烈征大理。旭烈兀出兵西征
-#### 1257年
+### 1257年
 > 蒙哥亲征南宋，以阿里不哥留守蒙古
-#### 1258年　 宋宝祐六年
+### 1258年　 宋宝祐六年
 > 旭烈兀攻陷报达，灭哈里发
 > 蒙哥统西路军入四川。诸王塔察儿统东路军攻宋，不利，命忽必烈统之
-#### 1259年　 宋开庆元年
+### 1259年　 宋开庆元年
 > 蒙哥汗久攻合州不克，死于军中
 > 贾似道援鄂州，向忽必烈求和，忽必烈北还
 > 旭烈兀侵入叙利亚
 
-### 世祖 宪天述道仁文义武大光孝皇帝 圣德神功文武皇帝 孛儿只斤·忽必烈 薛禅汗
-#### 中统元年 1260
+## 世祖 宪天述道仁文义武大光孝皇帝 圣德神功文武皇帝 孛儿只斤·忽必烈 薛禅汗
+### 中统元年 1260
 > 忽必烈即大汗位于开平，立中书省、十路宣抚司。罢侵高丽兵。阿里不哥即大汗位于和林城西夏宫，遣阿蓝答儿等取关陇地。忽必烈自统兵讨阿里不哥，败之；遣大臣夺取关陇，杀阿蓝答儿等
 > 发行中统元宝交钞
-#### 中统三年
+### 中统三年
 > 二月，益都李璮反；七月，败死
-#### 中统四年　 宋景定四年
+### 中统四年　 宋景定四年
 > 推行公田法
-#### 至元元年 1264
+### 至元元年 1264
 > 七月，阿里不哥降
 > 八月，改燕京为中都
 > 十二月，罢汉人诸侯世守，立千转法
-#### 至元五年
+### 至元五年
 > 立御史台
 > 忽必烈用南宋降将刘整策，发兵围襄、樊
 > 窝阔台系后王海都与察合台系后王八剌联兵反元
-#### 至元六年
+### 至元六年
 > 二月，立四道提刑按察司
 > 颁行八思巴字
 > 是年，海都、八剌和术赤系后王忙哥帖木儿在答剌速河谷举行忽里台，划分各自势力范围
-#### 至元七年
+### 至元七年
 > 正月，立尚书省。二月，立司农司，后改大司农司
-#### 至元八年
+### 至元八年
 > 十一月，建国号大元。是年，命皇子北平王那木罕出镇阿力麻里
-#### 至元九年
+### 至元九年
 > 二月，改中都为大都
-#### 至元十年 宋咸淳九年
+### 至元十年 宋咸淳九年
 > 襄樊之战，正月，元军破樊城。二月，襄阳降
-#### 至元十一年
+### 至元十一年
 > 以伯颜为统帅，发大军二十万征南宋。十二月，下鄂州
-#### 至元十二年 宋德祐元年
+### 至元十二年 宋德祐元年
 > 二月，元、宋在池州下游丁家州会战，宋军大败。元军连克建康、平江、常州等地，进逼临安。文天祥等起兵勤王
 > 元立阿力麻里行中书省，行枢密院
-#### 至元十三年 宋景炎元年
+### 至元十三年 宋景炎元年
 > 正月，南宋幼帝赵请降，元军取临安。五月，益王赵昰即帝位于福州，是为端宗。元军入福建、广西
 > 北平王那木罕所部宗王昔里吉叛，执那木罕送忙哥帖木儿处，以安童送海都处
-#### 至元十五年 宋祥兴元年
+### 至元十五年 宋祥兴元年
 > 宋端宗病死，张世杰、陆秀夫等拥立卫王赵昺为帝，移驻广东新会海中之崖山
 > 文天祥战败被俘
-#### 至元十六年
+### 至元十六年
 > 正月，元军攻破崖山，宋帝溺死，宋亡
 > 三月，忽必烈用郭守敬言，遣官四出测晷度，四海测验之所凡二十七
-#### 至元十八年
+### 至元十八年
 > 忽必烈发军侵日本，遇台风，全军覆没
 > 郭守敬等制定《授时历》，颁行天下
-#### 至元二十年
+### 至元二十年
 > 江南各族人民起义，凡二百余所。十月，福建建宁黄华起事，有众十万，号头陀军
 > 元朝发军侵缅国
-#### 至元二十一年
+### 至元二十一年
 > 元军侵占城、安南
-#### 至元二十三年
+### 至元二十三年
 > 五月，元军复侵安南，六月退还
 > 六月，以《农桑辑要》颁诸路
 > 十月，元军再次侵缅国
-#### 至元二十四年
+### 至元二十四年
 > 三月，发行至元通行宝钞
 > 四月，诸王乃颜反，忽必烈亲征，乃颜战败被擒，处死
 > 是年，福建钟明亮起义
 > 忽必烈又发兵侵安南
-#### 至元二十六年
+### 至元二十六年
 > 二月，籍江南户口
 > 七月，海都军进攻漠北，忽必烈亲征，复和林、留伯颜镇守
 > 江南各族人民起义，凡四百余处
-#### 至元二十八年
+### 至元二十八年
 > 二月，改提刑按察司为肃政廉访司
 > 五月，颁行《至元新格》
-#### 至元二十九年
+### 至元二十九年
 > 九月，置乌思藏纳里速古鲁孙等三路宣慰使司都元帅府
 > 发兵侵爪哇
-#### 至元三十年
+### 至元三十年
 > 七月，开通惠河，海运漕粮可直达大都
-#### 至元三十一年
+### 至元三十一年
 > 正月，忽必烈死。四月，铁穆耳即帝位，是为元成宗铁穆耳
-### 成宗 钦明广孝皇帝 孛儿只斤·铁穆耳 完泽笃汗
-#### 元贞元年 1295
-#### 大德元年 1297
-#### 大德四年
+## 成宗 钦明广孝皇帝 孛儿只斤·铁穆耳 完泽笃汗
+### 元贞元年 1295
+### 大德元年 1297
+### 大德四年
 > 十二月，元成宗发军侵八百媳妇国
-#### 大德五年
+### 大德五年
 > 五月，云南宋隆济、贵州蛇节相继起事，围攻元朝侵八百媳妇军
 > 海都等在岭北与元军战，海都败，退出岭北，死于途中
-#### 大德七年
+### 大德七年
 > 三月，《大元大一统志》编成
-#### 大德八年
+### 大德八年
 > 元朝与西北诸王约和，各遣使赴伊利汗处宣谕和好之意
-#### 大德十一年
+### 大德十一年
 > 正月，元成宗死。三月，侄爱育黎拔力八达发动政变，夺取政权，自北方迎其兄海山。五月，海山即帝位，是为元武宗。爱育黎拔力八达被立为皇太子
-### 武宗 统天继圣钦文英武大章孝皇帝 仁惠宣孝皇帝 孛儿只斤·海山 曲律汗
-#### 至大元年 1308
-#### 至大四年
+## 武宗 统天继圣钦文英武大章孝皇帝 仁惠宣孝皇帝 孛儿只斤·海山 曲律汗
+### 至大元年 1308
+### 至大四年
 > 正月，武宗死。爱育黎拔力八达执政。三月，即帝位，是为元仁宗爱育黎拔力八达
 
-### 仁宗 圣文钦孝皇帝 孛儿只斤·爱育黎拔力八达 普颜笃汗
-#### 皇庆元年 1312
-#### 皇庆二年
+## 仁宗 圣文钦孝皇帝 孛儿只斤·爱育黎拔力八达 普颜笃汗
+### 皇庆元年 1312
+### 皇庆二年
 > 十一月，行科举
-#### 延祐元年 1314
-#### 延祐元年
+### 延祐元年 1314
+### 延祐元年
 > 十月，遣张驴等经理江南田粮
-#### 延祐二年
+### 延祐二年
 > 七月，赣州蔡五九聚众起事，反对经理田粮；九月败死
-#### 延祐七年
+### 延祐七年
 > 正月，元仁宗死。三月，太子硕德八剌嗣帝位，是为元英宗硕德八剌
 
-### 英宗 继天体道敬文仁武大昭孝皇帝 睿圣文孝皇帝 孛儿只斤·硕德八剌 格坚汗
-#### 至治元年 1321
-#### 至治三年
+## 英宗 继天体道敬文仁武大昭孝皇帝 睿圣文孝皇帝 孛儿只斤·硕德八剌 格坚汗
+### 至治元年 1321
+### 至治三年
 > 二月，《大元通制》成，颁行天下
 > 八月，硕德八剌自上都还，驻南坡，为铁失等所杀。九月，晋王也孙铁木儿即帝位，是为泰定帝
 
-### 孛儿只斤·也孙铁木儿
-#### 泰定1324年－1328年
-#### 致和1328年
+## 孛儿只斤·也孙铁木儿
+### 泰定1324年－1328年
+### 致和1328年
 
-### 孛儿只斤·阿速吉八
-#### 天顺1328年
+## 孛儿只斤·阿速吉八
+### 天顺1328年
 
-### 文宗 钦天统圣至德诚功大文孝皇帝 圣明元孝皇帝 孛儿只斤·图帖睦尔 札牙笃汗
-#### 天历1328年－1329年
+## 中华简史-中华人民共和国卷
+## 文宗 钦天统圣至德诚功大文孝皇帝 圣明元孝皇帝 孛儿只斤·图帖睦尔 札牙笃汗
+### 天历1328年－1329年
 
-### 明宗 顺天立道睿文智武大圣孝皇帝 翼献景孝皇帝 孛儿只斤·和世琜 忽都笃汗
-#### 天历元年1328
+## 明宗 顺天立道睿文智武大圣孝皇帝 翼献景孝皇帝 孛儿只斤·和世琜 忽都笃汗
+### 天历元年1328
 > 七月，泰定帝死。九月，泰定皇太子阿剌吉八即帝位于上都。燕铁木儿于大都发动政变，迎元武宗之子图帖睦尔为帝，是为元文宗图帖睦尔。上都、大都两个政权并立，发生激烈战斗。十月，上都政权失败。十一月，图帖睦尔遣使往漠北迎其兄和世
-#### 天历二年
+### 天历二年
 > 正月，和世㻋于和林北即帝位，是为明宗。五月，和世㻋立图帖睦尔为皇太子。八月，和世㻋南来，与图帖睦尔相会于王忽察都，数日后暴死。图帖睦尔复即帝位
-### 文宗 钦天统圣至德诚功大文孝皇帝 圣明元孝皇帝 孛儿只斤·图帖睦尔 札牙笃汗
-#### 天历1329年－1330年
-#### 至顺元年1330
-#### 至顺二年
+## 文宗 钦天统圣至德诚功大文孝皇帝 圣明元孝皇帝 孛儿只斤·图帖睦尔 札牙笃汗
+### 天历1329年－1330年
+### 至顺元年1330
+### 至顺二年
 > 五月，《经世大典》修成
-#### 至顺三年
+### 至顺三年
 > 八月，元文宗死。十月，明宗和世㻋次子懿璘质班被立为帝，十一月死，庙号宁宗
 
-### 宁宗 冲圣嗣孝皇帝 孛儿只斤·懿璘质班
-#### 至顺1332年
+## 宁宗 冲圣嗣孝皇帝 孛儿只斤·懿璘质班
+### 至顺1332年
 
-### 惠宗 顺皇帝 （明太祖尊）孛儿只斤·妥懽帖睦尔
-#### 至顺1333年
-#### 元统元年 1333 
+## 惠宗 顺皇帝 （明太祖尊）孛儿只斤·妥懽帖睦尔
+### 至顺1333年
+### 元统元年 1333 
 > 六月，和世㻋长子妥欢帖睦尔即帝位，是为元顺帝妥欢贴睦尔
-#### 至元元年 1335
-#### 至元三年
+### 至元元年 1335
+### 至元三年
 > 正月，广州朱光卿等起义。二月，棒胡起义于汝宁信阳州；广西徭民再次起义
-#### 至元四年
+### 至元四年
 > 六月，袁州周子旺、漳州李志甫相继起义
-#### 至正元年 1341
-#### 至正二年
+### 至正元年 1341
+### 至正二年
 > 七月，教皇伯涅的克十二世使节来中国，抵达上都
-#### 至正四年
+### 至正四年
 > 五月，黄河决口，山东、河北皆受灾
-#### 至正五年
+### 至正五年
 > 十月，《辽史》、《金史》、《宋史》修成
 > 十一月，《至正条格》成
-#### 至正六年
+### 至正六年
 > 四月，辽阳吾者野人及水达达起义。六月，福建汀州罗天麟等起义。是年，武冈徭民吴天保起义
-#### 至正八年
+### 至正八年
 > 台州方国珍起事，聚众海上
-#### 至正十一年
+### 至正十一年
 > 四月，修治黄河，发民工十三万，军队二万。十一月，黄河堤成
 > 五月，颍州刘福通起义。八月，蕲州徐寿辉起义，国号天完。邳州李二、赵君用、彭早住起义，攻占徐州等地
-#### 至正十二年
+### 至正十二年
 > 二月，濠州郭子兴、孙德崖等起义。闰三月，朱元璋投奔郭子兴。八月，徐州被元军攻陷，李二死。是年，天完红巾军攻克长江中下游广大地区
-#### 至正十三年
+### 至正十三年
 > 正月，淮东张士诚起义，攻克高邮等地。是年，元军大举反攻，天完红巾军连遭挫折
-#### 至正十四年
+### 至正十四年
 > 正月，张士诚称诚王，国号大周。九月，元丞相脱脱率大军围高邮。元顺帝突然下令罢脱脱官爵，元军溃散
-#### 至正十五年
+### 至正十五年
 > 二月，刘福通迎韩山童之子韩林儿为帝，建国号宋，改元龙凤。韩林儿号小明王。是年，天完红巾军复起，连败元军
-#### 至正十六年
+### 至正十六年
 > 二月，张士诚部渡江攻克平江等地。三月，朱元璋取集庆。是年，天完、宋红巾军分头出击，连获胜利
-#### 至正十七年
+### 至正十七年
 > 宋红巾军分三路北伐，攻入陕西、山西、山东等地。是年，张士诚降元
-#### 至正十八年
+### 至正十八年
 > 宋红巾军毛贵部由山东入河北，直通大都，因孤军无援败退。刘福通于五月间攻占汴梁。天完红巾军连克江西、福建广大地区。十二月，宋红巾军攻占上都
-#### 至正十九年
+### 至正十九年
 > 北方元军反攻，三路北伐相继失败，九月，汴梁破，韩林儿、刘福通逃至安丰
-#### 至正二十年
+### 至正二十年
 > 五月，天完红巾军攻克太平。陈友谅杀徐寿辉，称帝，建国号汉
-#### 至正二十一年
+### 至正二十一年
 > 三月，明玉珍在四川称帝，建国号夏
-#### 至正二十三年
+### 至正二十三年
 > 朱元璋与陈友谅在鄱阳湖决战，陈败死。张士诚出兵袭安丰，刘福通、韩林儿为朱元璋救出。张士诚自称吴王
-#### 至正二十四年
+### 至正二十四年
 > 正月，朱元璋称吴王
-#### 至正二十六年
+### 至正二十六年
 > 八月，朱元璋发《平周檄》，大举进攻张士诚。十二月，朱元璋将韩林儿沉于江，宋政权亡
-#### 至正二十七年
+### 至正二十七年
 > 九月，朱军攻破平江，张士诚被擒自杀。朱元璋命徐达率大军北伐。十一月，浙东方国珍投降朱元璋。是年，北方军阀混战
-#### 至正二十八年，明洪武元年
+### 至正二十八年，明洪武元年
 > 正月，朱元璋在应天府即帝位，国号明，是为明太祖朱元璋
 > 闰七月，元顺帝逃往上都，史称北元。八月，明军占领大都，元亡
 
 >  部分资料来自网络，如侵犯您的权益，请联系我删除！
 
-
-元纪
-
+```
 
 世祖文武皇帝
 
@@ -1990,3 +1987,4 @@ description: 铁木真统一蒙古，蒙古人入主中原。
 元主驻应昌，二年殂，寿五十一，在位三十六年。太尉完者等奉梓宫北葬，谥曰惠宗。太祖以帝知顺天命，退避而去，特加号曰顺帝，而封其孙买的里八剌为崇礼侯。
 
 右元十帝共八十九年。
+```
